Update 4 test thumbnails & finish grid view

--- a/list.html
+++ b/list.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<title>Chef Tony Menu - Grid View</title>
+<title>Chef Tony Menu - List View</title>
 <link rel="stylesheet" type="text/css" href="css/reset.css">
 <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
@@ -18,9 +18,9 @@
 <div id="wrapper" class="clearfix">
 	<div id="sidebar">
 		<ul>
-			<li><a class="active" href="#">滋味煎菜</a></li>
+			<li><a href="#">滋味煎菜</a></li>
 			<li><a href="">養生燉鍋</a></li>
-			<li><a href="">馳名燒味</a></li>
+			<li><a class="active"  href="">馳名燒味</a></li>
 			<li><a href="">燕窩、海參、花膠</a></li>
 			<li><a href="">精選山珍小菜</a></li>
 			<li><a href="">心意小炒-素菜</a></li>
@@ -32,7 +32,7 @@
 			<li><a href="" >時令小菜 &#9733;</a></li>
 		</ul>
 	</div><!--sidebar-->
-	<div id="gridview" class="menu_body">
+	<div id="listview" class="menu_body">
     	<a href="">
 		<div class="grid_thumb">
 			<div>
