--- a/chinese/abalone_sharkfin.html
+++ b/chinese/abalone_sharkfin.html
@@ -8,14 +8,16 @@
 <title>Chef Tony Menu - Abalone & Shark Fin - Grid View</title>
 <link rel="stylesheet" type="text/css" href="../css/reset.css">
 <link rel="stylesheet" type="text/css" href="../css/main.css">
+<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300' rel='stylesheet' type='text/css'>
+
 </head>
 
 <body>
 
 <div id="header"><!--
 	<span class="helper"></span>-->
-    <a href=""><img src="../images/logo.png" alt="Chef Tony Menu" /></a>
-	<a class="lang">English &raquo;</a> 
+    <a href="../index.html"><img src="../images/logo.png" alt="Chef Tony Menu" /></a>
+	<a class="lang" href="../english/abalone_sharkfin.html">English</a> 
 </div><!--header-->
 
 <div id="wrapper" class="clearfix">
@@ -27,17 +29,16 @@
 			<li><a href="birdsnest_swimbladder_seacucumber.html">燕窩、海參、花膠</a></li>
 			<li><a href="specialties_luxury.html">山珍小菜</a></li>
 			<li><a href="specialties_heart.html">心意小炒</a></li>
-			<li><a href="noodles_rices.html">粉面飯</a></li>
-			<li><a class="active" href="abalone_sharkfin.html">鮑魚、魚翅</a></li>
-			<li><a href="casseroles.html">煲仔</a></li>
-			<li><a href="desserts.html">甜品</a></li>
+			<li><a href="noodles_rices.html">粉麵飯</a></li>
+			<li><a class="active" href="abalone_sharkfin_list.html">鮑魚、魚翅</a></li>
+			<li><a href="hotpot_list.html">煲仔</a></li>
+			<li><a href="desserts_list.html">甜品</a></li>
 			<li><a href="" >時令小菜 &#9733;</a></li>
 		</ul>
 	</div><!--sidebar-->
 	<div id="gridview" class="menu_body">
     	
 
-<a href="list.html">
         <div class="grid_thumb">
 			<div class="heading">
 				<h1>至尊鮑汁扒鮑魚</h1>
@@ -45,7 +46,7 @@
 			</div>
 			<img src="../images/dishes/8_abalone/superabalone_s.jpg" alt="至尊鮑汁扒鮑魚" />
 		</div><!--grid_thumb-->
-</a>
+
 
 
 
@@ -63,8 +64,14 @@
 <script>
 	$( document ).ready(function() {
 	  // Handler for .ready() called.
-	  $( "<div class='arrow-right'></div>").insertAfter( "#sidebar a.active" );
+	  //$( "<div class='arrow-right'></div>").insertAfter( "#sidebar a.active" );
 	  $( "<img class='glare' src='../images/glare.png'>").insertAfter( "div.grid_thumb img" );
+	  
+	  $("div.grid_thumb").each(function(index){
+		  index2 = index + 1;
+	  	  $(this).wrap( "<a href='abalone_sharkfin_list.html?id="+ index2 +"'></a>" );
+		  //$(this).wrap( "<a href='starters_list.html'></a>" );
+	  });
 	  
 	});
 	window.addEventListener("load",function() {
