--- a/chinese/birdsnest_swimbladder_seacucumber.html
+++ b/chinese/birdsnest_swimbladder_seacucumber.html
@@ -5,17 +5,19 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <meta name="apple-mobile-web-app-capable" content="yes" />
 
-<title>Chef Tony Menu Bird's Nest, Swim Bladder, Sea Cucumber - Grid View</title>
+<title>Chef Tony Menu - Bird's Nest, Swim Bladder, Sea Cucumber - Grid View</title>
 <link rel="stylesheet" type="text/css" href="../css/reset.css">
 <link rel="stylesheet" type="text/css" href="../css/main.css">
+<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300' rel='stylesheet' type='text/css'>
+
 </head>
 
 <body>
 
 <div id="header"><!--
 	<span class="helper"></span>-->
-    <a href=""><img src="../images/logo.png" alt="Chef Tony Menu" /></a>
-	<a class="lang">English &raquo;</a> 
+    <a href="../index.html"><img src="../images/logo.png" alt="Chef Tony Menu" /></a>
+	<a class="lang" href="../english/birdsnest_swimbladder_seacucumber.html">English</a> 
 </div><!--header-->
 
 <div id="wrapper" class="clearfix">
@@ -27,100 +29,81 @@
 			<li><a class="active" href="birdsnest_swimbladder_seacucumber.html">燕窩、海參、花膠</a></li>
 			<li><a href="specialties_luxury.html">山珍小菜</a></li>
 			<li><a href="specialties_heart.html">心意小炒</a></li>
-			<li><a href="noodles_rices.html">粉面飯</a></li>
-			<li><a href="abalone_sharkfin.html">鮑魚、魚翅</a></li>
-			<li><a href="casseroles.html">煲仔</a></li>
-			<li><a href="desserts.html">甜品</a></li>
+			<li><a href="noodles_rices.html">粉麵飯</a></li>
+			<li><a href="abalone_sharkfin_list.html">鮑魚、魚翅</a></li>
+			<li><a href="hotpot_list.html">煲仔</a></li>
+			<li><a href="desserts_list.html">甜品</a></li>
 			<li><a href="" >時令小菜 &#9733;</a></li>
 		</ul>
 	</div><!--sidebar-->
 	<div id="gridview" class="menu_body">
     	
-<a href="list.html">
         <div class="grid_thumb">
 			<div class="heading">
 				<h1>松茸鷓鴣燉官燕</h1>
-				<p class="price">$20<sup>.99</sup></p>
+				<p class="price seasonal">時價</p>
 			</div>
 			<img src="../images/dishes/4_birdnest/birdsnest_s.jpg" alt="松茸鷓鴣燉官燕" />
 		</div><!--grid_thumb-->
-</a>
 
-<a href="">
         <div class="grid_thumb">
 			<div class="heading">
 				<h1>野米松茸煮遼參</h1>
-				<p class="price">$20<sup>.99</sup></p>
+				<p class="price seasonal">時價</p>
 			</div>
 			<img src="../images/dishes/4_birdnest/seacucumber_s.jpg" alt="野米松茸煮遼參" />
 		</div><!--grid_thumb-->
-</a>
 
-<a href="">
         <div class="grid_thumb">
 			<div class="heading">
-				<h1 class="">金蒜黑松露爆炒遼參</h1>
-				<p class="price">$20<sup>.99</sup></p>
+				<h1 class="tworow">金蒜黑松露爆炒遼參 (例) </h1>
+				<p class="price">$23<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/4_birdnest/friedgarlic_s.jpg" alt="金蒜黑松露爆炒遼參" />
 		</div><!--grid_thumb-->
-</a>
 
-<a href="">
         <div class="grid_thumb">
 			<div class="heading">
 				<h1>陳醋浸遼參</h1>
-				<p class="price">$20<sup>.99</sup></p>
+				<p class="price seasonal">時價</p>
 			</div>
 			<img src="../images/dishes/4_birdnest/vinegarseacucumber_s.jpg" alt="陳醋浸遼參" />
 		</div><!--grid_thumb-->
-</a>
 
-<a href="">
         <div class="grid_thumb">
 			<div class="heading">
 				<h1>頂湯堂灼白花膠</h1>
-				<p class="price">$20<sup>.99</sup></p>
+				<p class="price seasonal">時價</p>
 			</div>
 			<img src="../images/dishes/4_birdnest/boiledswimbladder_s.jpg" alt="頂湯堂灼白花膠" />
 		</div><!--grid_thumb-->
-</a>
 
-<a href="">
         <div class="grid_thumb">
 			<div class="heading">
 				<h1>鮑汁花膠松茸</h1>
-				<p class="price">$20<sup>.99</sup></p>
+				<p class="price seasonal">時價</p>
 			</div>
 			<img src="../images/dishes/4_birdnest/abaloneswimbladder_s.jpg" alt="鮑汁花膠松茸" />
 		</div><!--grid_thumb-->
-</a>
 
-<a href="">
+
         <div class="grid_thumb">
 			<div class="heading">
 				<h1>鮑汁遼參</h1>
-				<p class="price">$20<sup>.99</sup></p>
+				<p class="price seasonal">時價</p>
 			</div>
 			<img src="../images/dishes/4_birdnest/abaloneseacucumber_s.jpg" alt="鮑汁遼參" />
 		</div><!--grid_thumb-->
-</a>
 
-<a href="">
+
+
         <div class="grid_thumb">
 			<div class="heading">
 				<h1>黑松露紅燒燕窩</h1>
-				<p class="price">$20<sup>.99</sup></p>
+				<p class="price seasonal">時價</p>
 			</div>
 			<img src="../images/dishes/4_birdnest/trufflebirdsnest_s.jpg" alt="黑松露紅燒燕窩" />
 		</div><!--grid_thumb-->
-</a>
-
-
-
-
-
-
 
 
 
@@ -139,8 +122,14 @@
 <script>
 	$( document ).ready(function() {
 	  // Handler for .ready() called.
-	  $( "<div class='arrow-right'></div>").insertAfter( "#sidebar a.active" );
+	  //$( "<div class='arrow-right'></div>").insertAfter( "#sidebar a.active" );
 	  $( "<img class='glare' src='../images/glare.png'>").insertAfter( "div.grid_thumb img" );
+	  
+	  $("div.grid_thumb").each(function(index){
+		  index2 = index + 1;
+	  	  $(this).wrap( "<a href='birdsnest_etc_list.html?id="+ index2 +" '></a>" );
+		  //$(this).wrap( "<a href='starters_list.html'></a>" );
+	  });
 	  
 	});
 	window.addEventListener("load",function() {
