--- a/chinese/casseroles.html
+++ b/chinese/casseroles.html
@@ -8,14 +8,16 @@
 <title>Chef Tony Menu - Casseroles - Grid View</title>
 <link rel="stylesheet" type="text/css" href="../css/reset.css">
 <link rel="stylesheet" type="text/css" href="../css/main.css">
+<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300' rel='stylesheet' type='text/css'>
+
 </head>
 
 <body>
 
 <div id="header"><!--
 	<span class="helper"></span>-->
-    <a href=""><img src="../images/logo.png" alt="Chef Tony Menu" /></a>
-	<a class="lang">English &raquo;</a> 
+    <a href="../index.html"><img src="../images/logo.png" alt="Chef Tony Menu" /></a>
+	<a class="lang" href="../english/casseroles.html">English</a> 
 </div><!--header-->
 
 <div id="wrapper" class="clearfix">
@@ -27,10 +29,10 @@
 			<li><a href="birdsnest_swimbladder_seacucumber.html">燕窩、海參、花膠</a></li>
 			<li><a href="specialties_luxury.html">山珍小菜</a></li>
 			<li><a href="specialties_heart.html">心意小炒</a></li>
-			<li><a href="noodles_rices.html">粉面飯</a></li>
-			<li><a href="abalone_sharkfin.html">鮑魚、魚翅</a></li>
-			<li><a class="active" href="casseroles.html">煲仔</a></li>
-			<li><a href="desserts.html">甜品</a></li>
+			<li><a href="noodles_rices.html">粉麵飯</a></li>
+			<li><a href="abalone_sharkfin_list.html">鮑魚、魚翅</a></li>
+			<li><a class="active" href="hotpot_list.html">煲仔</a></li>
+			<li><a href="desserts_list.html">甜品</a></li>
 			<li><a href="" >時令小菜 &#9733;</a></li>
 		</ul>
 	</div><!--sidebar-->
