--- a/chinese/soups_list.html
+++ b/chinese/soups_list.html
@@ -8,15 +8,17 @@
 <title>Chef Tony Menu - Soups - List View</title>
 <link rel="stylesheet" type="text/css" href="../css/reset.css">
 <link rel="stylesheet" type="text/css" href="../css/main.css">
+<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300' rel='stylesheet' type='text/css'>
+
 </head>
 
 <body>
 
 <div id="header"><!--
 	<span class="helper"></span>-->
-    <a href=""><img src="../images/logo.png" alt="Chef Tony Menu" /></a>
+    <a href="../index.html"><img src="../images/logo.png" alt="Chef Tony Menu" /></a>
     <a id="back" href="soups.html">返回</a>
-	<a href="../english/soups_list.html" class="lang">English &raquo;</a> 
+	<a href="../english/soups_list.html" class="lang">English</a> 
 </div><!--header-->
 
 <div id="wrapper" class="clearfix">
@@ -28,10 +30,10 @@
 			<li><a href="birdsnest_swimbladder_seacucumber.html">燕窩、海參、花膠</a></li>
 			<li><a href="specialties_luxury.html">山珍小菜</a></li>
 			<li><a href="specialties_heart.html">心意小炒</a></li>
-			<li><a href="noodles_rices.html">粉面飯</a></li>
-			<li><a href="abalone_sharkfin.html">鮑魚、魚翅</a></li>
-			<li><a href="casseroles.html">煲仔</a></li>
-			<li><a href="desserts.html">甜品</a></li>
+			<li><a href="noodles_rices.html">粉麵飯</a></li>
+			<li><a href="abalone_sharkfin_list.html">鮑魚、魚翅</a></li>
+			<li><a href="hotpot_list.html">煲仔</a></li>
+			<li><a href="desserts_list.html">甜品</a></li>
 			<li><a href="" >時令小菜 &#9733;</a></li>
 		</ul>
 	</div><!--sidebar-->
@@ -47,7 +49,7 @@
                 	<p>預訂</p>
                     <p>4位起</p>
                 </div>
-				<p class="price">$20<sup>.99</sup></p>
+				<p class="price">$58<sup>.80</sup></p>
 			</div>
                     <img src="../images/dishes/2_soups/chickoyster_l.jpg" alt="松茸燉土雞螺頭" />
             
@@ -59,7 +61,7 @@
                 <p class="desc"></p>
                 <div class="tags">
                 </div>
-				<p class="price">$20<sup>.99</sup></p>
+				<p class="price">$88<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/2_soups/seahorsesoup_l.jpg" alt="海馬遼參養生湯" />
 		</li><!--list_item-->
@@ -70,7 +72,7 @@
                 <p class="desc"></p>
                 <div class="tags">
                 </div>
-				<p class="price">$20<sup>.99</sup></p>
+				<p class="price">$68<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/2_soups/fishhead_l.jpg" alt="靈芝天麻燉魚頭" />
 		</li><!--list_item-->
@@ -81,7 +83,7 @@
                 <p class="desc"></p>
                 <div class="tags">
                 </div>
-				<p class="price">$20<sup>.99</sup></p>
+				<p class="price">$68<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/2_soups/oldpigeon_l.jpg" alt="靈芝石斛洋參燉老鴿" />
 		</li><!--list_item-->
@@ -92,7 +94,7 @@
                 <p class="desc"></p>
                 <div class="tags">
                 </div>
-				<p class="price">$20<sup>.99</sup></p>
+				<p class="price">$48<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/2_soups/scallopmelon_l.jpg" alt="瑤柱竹笙燉節瓜" />
 		</li><!--list_item-->
@@ -103,7 +105,7 @@
                 <p class="desc"></p>
                 <div class="tags">
                 </div>
-				<p class="price">$20<sup>.99</sup></p>
+				<p class="price">$88<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/2_soups/mineralsoup_l.jpg" alt="礦泉水花膠肉汁湯" />
 		</li><!--list_item-->
@@ -114,7 +116,7 @@
                 <p class="desc"></p>
                 <div class="tags">
                 </div>
-				<p class="price">$20<sup>.99</sup></p>
+				<p class="price">$88<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/2_soups/trufflescallop_l.jpg" alt="黑松露燉螺片乾貝" />
 		</li><!--list_item-->
@@ -139,7 +141,7 @@
 
 <script>
 	$( document ).ready(function() {
-		//alert(document.URL);
+		$("<img class='glare' src='../images/glare2.png'>").insertAfter( "li.list_item img" );
 		
 	  // Handler for .ready() called.
 	  //$( "<div class='arrow-right'></div>").insertAfter( "#sidebar a.active" );
@@ -149,6 +151,7 @@
 	  });
 	  
 	  $('.bxslider').bxSlider({
+			startSlide: id - 1,
 			mode: 'vertical',
 			pager: false,
 			//auto: true,
