--- a/chinese/specialties_heart.html
+++ b/chinese/specialties_heart.html
@@ -8,14 +8,16 @@
 <title>Chef Tony Menu - Specialties (Heart) - Grid View</title>
 <link rel="stylesheet" type="text/css" href="../css/reset.css">
 <link rel="stylesheet" type="text/css" href="../css/main.css">
+<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300' rel='stylesheet' type='text/css'>
+
 </head>
 
 <body>
 
 <div id="header"><!--
 	<span class="helper"></span>-->
-    <a href=""><img src="../images/logo.png" alt="Chef Tony Menu" /></a>
-	<a class="lang">English &raquo;</a> 
+    <a href="../index.html"><img src="../images/logo.png" alt="Chef Tony Menu" /></a>
+	<a class="lang" href="../english/specialties_heart.html">English</a> 
 </div><!--header-->
 
 <div id="wrapper" class="clearfix">
@@ -27,175 +29,158 @@
 			<li><a href="birdsnest_swimbladder_seacucumber.html">燕窩、海參、花膠</a></li>
 			<li><a href="specialties_luxury.html">山珍小菜</a></li>
 			<li><a class="active" href="specialties_heart.html">心意小炒</a></li>
-			<li><a href="noodles_rices.html">粉面飯</a></li>
-			<li><a href="abalone_sharkfin.html">鮑魚、魚翅</a></li>
-			<li><a href="casseroles.html">煲仔</a></li>
-			<li><a href="desserts.html">甜品</a></li>
+			<li><a href="noodles_rices.html">粉麵飯</a></li>
+			<li><a href="abalone_sharkfin_list.html">鮑魚、魚翅</a></li>
+			<li><a href="hotpot_list.html">煲仔</a></li>
+			<li><a href="desserts_list.html">甜品</a></li>
 			<li><a href="" >時令小菜 &#9733;</a></li>
 		</ul>
 	</div><!--sidebar-->
 	<div id="gridview" class="menu_body">
     	
-
-<a href="list.html">
         <div class="grid_thumb">
 			<div class="heading">
 				<h1>健康六合菜</h1>
-				<p class="price">$20<sup>.99</sup></p>
+				<p class="price">$18<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/6_specialties_xinyi/healthy6_s.jpg" alt="健康六合菜" />
 		</div><!--grid_thumb-->
-</a>
 
-<a href="">
+
         <div class="grid_thumb">
 			<div class="heading">
 				<h1>剁椒蒸金針菇</h1>
-				<p class="price">$20<sup>.99</sup></p>
+				<p class="price">$16<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/6_specialties_xinyi/goldmushroom_s.jpg" alt="剁椒蒸金針菇" />
 		</div><!--grid_thumb-->
-</a>
 
-<a href="">
+
         <div class="grid_thumb">
 			<div class="heading">
-				<h1>南乳炸系排骨</h1>
-				<p class="price">$20<sup>.99</sup></p>
+				<h1>南乳炸西排骨</h1>
+				<p class="price">$14<sup>.80</sup></p>
 			</div>
-			<img src="../images/dishes/6_specialties_xinyi/southpork_s.jpg" alt="南乳炸系排骨" />
+			<img src="../images/dishes/6_specialties_xinyi/southpork_s.jpg" alt="南乳炸西排骨" />
 		</div><!--grid_thumb-->
-</a>
 
-<a href="">
+
         <div class="grid_thumb">
 			<div class="heading">
-				<h1>薑油紫蘇薄荷葉焗雞件</h1>
-				<p class="price">$20<sup>.99</sup></p>
+				<h1 class="tworow">薑油紫蘇薄荷葉<br />焗雞件</h1>
+				<p class="price">$18<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/6_specialties_xinyi/mintchicken_s.jpg" alt="薑油紫蘇薄荷葉焗雞件" />
 		</div><!--grid_thumb-->
-</a>
 
-<a href="">
+
         <div class="grid_thumb">
 			<div class="heading">
-				<h1>手剁馬蹄碎豆豉蒸肉餅</h1>
-				<p class="price">$20<sup>.99</sup></p>
+				<h1 class="tworow">手剁馬蹄碎豆豉<br />蒸肉餅</h1>
+				<p class="price">$14<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/6_specialties_xinyi/beanmeatcake_s.jpg" alt="手剁馬蹄碎豆豉蒸肉餅" />
 		</div><!--grid_thumb-->
-</a>
 
-<a href="">
+
         <div class="grid_thumb">
 			<div class="heading">
 				<h1>海洲煎蝦餅</h1>
-				<p class="price">$20<sup>.99</sup></p>
+				<p class="price">$16<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/6_specialties_xinyi/shrimpcake_s.jpg" alt="海洲煎蝦餅" />
 		</div><!--grid_thumb-->
-</a>
 
-<a href="">
+
         <div class="grid_thumb">
 			<div class="heading">
 				<h1>湘味小炒肥牛肉</h1>
-				<p class="price">$20<sup>.99</sup></p>
+				<p class="price">$16<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/6_specialties_xinyi/fattybeef_s.jpg" alt="湘味小炒肥牛肉" />
 		</div><!--grid_thumb-->
-</a>
 
-<a href="">
+
         <div class="grid_thumb">
 			<div class="heading">
 				<h1>瑤柱蒸水蛋</h1>
-				<p class="price">$20<sup>.99</sup></p>
+				<p class="price">$18<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/6_specialties_xinyi/steamedegg_s.jpg" alt="瑤柱蒸水蛋" />
 		</div><!--grid_thumb-->
-</a>
 
-<a href="">
+
         <div class="grid_thumb">
 			<div class="heading">
 				<h1>鹽油水焗海石斑</h1>
-				<p class="price">$20<sup>.99</sup></p>
+				<p class="price seasonal">時價</p>
 			</div>
 			<img src="../images/dishes/6_specialties_xinyi/bakedfish_s.jpg" alt="鹽油水焗海石斑" />
 		</div><!--grid_thumb-->
-</a>
 
-<a href="">
+
         <div class="grid_thumb">
 			<div class="heading">
 				<h1>胡椒玉蘭炒藕盒</h1>
-				<p class="price">$20<sup>.99</sup></p>
+				<p class="price">$18<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/6_specialties_xinyi/lotusbox_s.jpg" alt="胡椒玉蘭炒藕盒" />
 		</div><!--grid_thumb-->
-</a>
 
-<a href="">
+
         <div class="grid_thumb">
 			<div class="heading">
 				<h1>脆皮海鮮酥</h1>
-				<p class="price">$20<sup>.99</sup></p>
+				<p class="price">$18<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/6_specialties_xinyi/crispyseafood_s.jpg" alt="脆皮海鮮酥" />
 		</div><!--grid_thumb-->
-</a>
 
-<a href="">
+
         <div class="grid_thumb">
 			<div class="heading">
-				<h1>荷塘脆香</h1>
-				<p class="price">$20<sup>.99</sup></p>
+				<h1>游龍脆香</h1>
+				<p class="price">$18<sup>.80</sup></p>
 			</div>
-			<img src="../images/dishes/6_specialties_xinyi/pond_s.jpg" alt="荷塘脆香" />
+			<img src="../images/dishes/6_specialties_xinyi/pond_s.jpg" alt="游龍脆香" />
 		</div><!--grid_thumb-->
-</a>
 
-<a href="">
+
         <div class="grid_thumb">
 			<div class="heading">
-				<h1>蟲草花炒水鹹魚</h1>
-				<p class="price">$20<sup>.99</sup></p>
+				<h1>蟲草花炒水咸魚</h1>
+				<p class="price">$16<sup>.80</sup></p>
 			</div>
-			<img src="../images/dishes/6_specialties_xinyi/flowerfish_s.jpg" alt="蟲草花炒水鹹魚" />
+			<img src="../images/dishes/6_specialties_xinyi/flowerfish_s.jpg" alt="蟲草花炒水咸魚" />
 		</div><!--grid_thumb-->
-</a>
 
-<a href="">
+
         <div class="grid_thumb">
 			<div class="heading">
 				<h1>青芥焗牛仔肉</h1>
-				<p class="price">$20<sup>.99</sup></p>
+				<p class="price">$16<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/6_specialties_xinyi/mustardbeef_s.jpg" alt="青芥焗牛仔肉" />
 		</div><!--grid_thumb-->
-</a>
 
-<a href="">
+
         <div class="grid_thumb">
 			<div class="heading">
 				<h1>鮮茄汁煮蝦線</h1>
-				<p class="price">$20<sup>.99</sup></p>
+				<p class="price">$18<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/6_specialties_xinyi/tomatoshrimp_s.jpg" alt="鮮茄汁煮蝦線" />
 		</div><!--grid_thumb-->
-</a>
 
-<a href="">
+
         <div class="grid_thumb">
 			<div class="heading">
 				<h1>黑椒茄瓜焗牛仔骨</h1>
-				<p class="price">$20<sup>.99</sup></p>
+				<p class="price">$18<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/6_specialties_xinyi/blackpepperbeef_s.jpg" alt="黑椒茄瓜焗牛仔骨" />
 		</div><!--grid_thumb-->
-</a>
+
 
 
 
@@ -215,8 +200,14 @@
 <script>
 	$( document ).ready(function() {
 	  // Handler for .ready() called.
-	  $( "<div class='arrow-right'></div>").insertAfter( "#sidebar a.active" );
+	  //$( "<div class='arrow-right'></div>").insertAfter( "#sidebar a.active" );
 	  $( "<img class='glare' src='../images/glare.png'>").insertAfter( "div.grid_thumb img" );
+	  
+	  $("div.grid_thumb").each(function(index){
+		  index2 = index + 1;
+	  	  $(this).wrap( "<a href='heart_list.html?id="+ index2 +"'></a>" );
+		  //$(this).wrap( "<a href='starters_list.html'></a>" );
+	  });
 	  
 	});
 	window.addEventListener("load",function() {
