--- a/chinese/specialties_luxury.html
+++ b/chinese/specialties_luxury.html
@@ -8,14 +8,16 @@
 <title>Chef Tony Menu - Specialties (Luxury) - Grid View</title>
 <link rel="stylesheet" type="text/css" href="../css/reset.css">
 <link rel="stylesheet" type="text/css" href="../css/main.css">
+<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300' rel='stylesheet' type='text/css'>
+
 </head>
 
 <body>
 
 <div id="header"><!--
 	<span class="helper"></span>-->
-    <a href=""><img src="../images/logo.png" alt="Chef Tony Menu" /></a>
-	<a class="lang">English &raquo;</a> 
+    <a href="../index.html"><img src="../images/logo.png" alt="Chef Tony Menu" /></a>
+	<a class="lang" href="../english/specialties_luxury.html">English</a> 
 </div><!--header-->
 
 <div id="wrapper" class="clearfix">
@@ -27,10 +29,10 @@
 			<li><a href="birdsnest_swimbladder_seacucumber.html">燕窩、海參、花膠</a></li>
 			<li><a class="active" href="specialties_luxury.html">山珍小菜</a></li>
 			<li><a href="specialties_heart.html">心意小炒</a></li>
-			<li><a href="noodles_rices.html">粉面飯</a></li>
-			<li><a href="abalone_sharkfin.html">鮑魚、魚翅</a></li>
-			<li><a href="casseroles.html">煲仔</a></li>
-			<li><a href="desserts.html">甜品</a></li>
+			<li><a href="noodles_rices.html">粉麵飯</a></li>
+			<li><a href="abalone_sharkfin_list.html">鮑魚、魚翅</a></li>
+			<li><a href="hotpot_list.html">煲仔</a></li>
+			<li><a href="desserts_list.html">甜品</a></li>
 			<li><a href="" >時令小菜 &#9733;</a></li>
 		</ul>
 	</div><!--sidebar-->
@@ -38,155 +40,154 @@
     	
      
 
-<a href="">
+
         <div class="grid_thumb">
 			<div class="heading">
 				<h1>九層塔牛肝菌焗羊架</h1>
-				<p class="price">$20<sup>.99</sup></p>
+				<p class="price">$26<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/5_specialties_shanzhen/lamb9_s.jpg" alt="九層塔牛肝菌焗羊架" />
 		</div><!--grid_thumb-->
-</a>
 
-<a href="">
+
+
         <div class="grid_thumb">
 			<div class="heading">
 				<h1>干鍋杏鮑菇</h1>
-				<p class="price">$20<sup>.99</sup></p>
+				<p class="price">$16<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/5_specialties_shanzhen/abalonemushroom_s.jpg" alt="干鍋杏鮑菇" />
 		</div><!--grid_thumb-->
-</a>
 
-<a href="">
+
+
         <div class="grid_thumb">
 			<div class="heading">
 				<h1>松茸炒牛肩肉</h1>
-				<p class="price">$20<sup>.99</sup></p>
+				<p class="price">$18<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/5_specialties_shanzhen/beefshoulder_s.jpg" alt="松茸炒牛肩肉" />
 		</div><!--grid_thumb-->
-</a>
 
-<a href="">
+
+
         <div class="grid_thumb">
 			<div class="heading">
 				<h1>泰式咖哩牛腩</h1>
-				<p class="price">$20<sup>.99</sup></p>
+				<p class="price">$16<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/5_specialties_shanzhen/currybeef_s.jpg" alt="泰式咖哩牛腩" />
 		</div><!--grid_thumb-->
-</a>
 
-<a href="">
+
+
         <div class="grid_thumb">
 			<div class="heading">
 				<h1>特味波士頓龍蝦</h1>
-				<p class="price">$20<sup>.99</sup></p>
+				<p class="price seasonal">時價</p>
 			</div>
 			<img src="../images/dishes/5_specialties_shanzhen/bostonlobster_s.jpg" alt="特味波士頓龍蝦" />
 		</div><!--grid_thumb-->
-</a>
 
-<a href="">
+
+
         <div class="grid_thumb">
 			<div class="heading">
 				<h1>碧綠羊肚菌煎釀花枝丸</h1>
-				<p class="price">$20<sup>.99</sup></p>
+				<p class="price">$18<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/5_specialties_shanzhen/lambfishball_s.jpg" alt="碧綠羊肚菌煎釀花枝丸" />
 		</div><!--grid_thumb-->
-</a>
 
-<a href="">
+
+
         <div class="grid_thumb">
 			<div class="heading">
 				<h1>私房炒花膠</h1>
-				<p class="price">$20<sup>.99</sup></p>
+				<p class="price">$23<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/5_specialties_shanzhen/specialswimbladder_s.jpg" alt="私房炒花膠" />
 		</div><!--grid_thumb-->
-</a>
 
-<a href="">
+
+
         <div class="grid_thumb">
 			<div class="heading">
 				<h1>米湯浸羊肚菌</h1>
-				<p class="price">$20<sup>.99</sup></p>
+				<p class="price">$18<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/5_specialties_shanzhen/lambbelly_s.jpg" alt="米湯浸羊肚菌" />
 		</div><!--grid_thumb-->
-</a>
 
-<a href="">
+
+
         <div class="grid_thumb">
 			<div class="heading">
 				<h1>美極淮山焗魚鬆</h1>
-				<p class="price">$20<sup>.99</sup></p>
+				<p class="price">$18<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/5_specialties_shanzhen/bakedfish_s.jpg" alt="美極淮山焗魚鬆" />
 		</div><!--grid_thumb-->
-</a>
 
-<a href="">
+
         <div class="grid_thumb">
 			<div class="heading">
 				<h1>脆炸黑松露鮮蝦卷</h1>
-				<p class="price">$20<sup>.99</sup></p>
+				<p class="price">$18<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/5_specialties_shanzhen/deepfriedshrimp_s.jpg" alt="脆炸黑松露鮮蝦卷" />
 		</div><!--grid_thumb-->
-</a>
 
-<a href="">
+
+
         <div class="grid_thumb">
 			<div class="heading">
-				<h1>金蒜松茸爆炒貴妃蚌</h1>
-				<p class="price">$20<sup>.99</sup></p>
+				<h1>金蒜松茸爆炒桂花蚌</h1>
+				<p class="price">$28<sup>.80</sup></p>
 			</div>
-			<img src="../images/dishes/5_specialties_shanzhen/friedclam_s.jpg" alt="金蒜松茸爆炒貴妃蚌" />
+			<img src="../images/dishes/5_specialties_shanzhen/friedclam_s.jpg" alt="金蒜松茸爆炒桂花蚌" />
 		</div><!--grid_thumb-->
-</a>
 
-<a href="">
+
+
         <div class="grid_thumb">
 			<div class="heading">
 				<h1>青芥汁煎焗牛肝菌</h1>
-				<p class="price">$20<sup>.99</sup></p>
+				<p class="price">$20<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/5_specialties_shanzhen/mustardmushroom_s.jpg" alt="青芥汁煎焗牛肝菌" />
 		</div><!--grid_thumb-->
-</a>
 
-<a href="">
+
+
         <div class="grid_thumb">
 			<div class="heading">
 				<h1>鵝肝醬燜煮滑豆腐</h1>
-				<p class="price">$20<sup>.99</sup></p>
+				<p class="price">$18<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/5_specialties_shanzhen/softtofu_s.jpg" alt="鵝肝醬燜煮滑豆腐" />
 		</div><!--grid_thumb-->
-</a>
 
-<a href="">
+
+
         <div class="grid_thumb">
 			<div class="heading">
 				<h1 class="tworow">黑松露意大利醋焗雪花牛肉粒</h1>
-				<p class="price">$20<sup>.99</sup></p>
+				<p class="price">$26<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/5_specialties_shanzhen/italianbeef_s.jpg" alt="黑松露意大利醋焗雪花牛肉粒" />
 		</div><!--grid_thumb-->
-</a>
 
-<a href="">
+
+
         <div class="grid_thumb">
 			<div class="heading">
 				<h1>黑松露煎焗雞件</h1>
-				<p class="price">$20<sup>.99</sup></p>
+				<p class="price">$18<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/5_specialties_shanzhen/bakedchicken_s.jpg" alt="黑松露煎焗雞件" />
 		</div><!--grid_thumb-->
-</a>
+
 
 
 
@@ -204,8 +205,14 @@
 <script>
 	$( document ).ready(function() {
 	  // Handler for .ready() called.
-	  $( "<div class='arrow-right'></div>").insertAfter( "#sidebar a.active" );
+	  //$( "<div class='arrow-right'></div>").insertAfter( "#sidebar a.active" );
 	  $( "<img class='glare' src='../images/glare.png'>").insertAfter( "div.grid_thumb img" );
+	  
+	  $("div.grid_thumb").each(function(index){
+		  index2 = index + 1;
+	  	  $(this).wrap( "<a href='luxury_list.html?id="+ index2 +"'></a>" );
+		  //$(this).wrap( "<a href='starters_list.html'></a>" );
+	  });
 	  
 	});
 	window.addEventListener("load",function() {
