--- a/english/noodles_rices.html
+++ b/english/noodles_rices.html
@@ -17,80 +17,79 @@
 <div id="header"><!--
 	<span class="helper"></span>-->
     <a href="../index.html"><img src="../images/logo.png" alt="Chef Tony Menu" /></a>
-	<a class="lang" href="../english/noodles_rices.html">English</a> 
-</div><!--header-->
+	<a class="lang" href="../chinese/noodles_rices.html">中文</a> </div><!--header-->
 
-<div id="wrapper" class="clearfix">
+<div id="wrapper" class="clearfix is_english">
 	<div id="sidebar">
 		<ul>
-			<li><a href="starters.html">滋味煎菜</a></li>
-			<li><a href="soups.html">養生燉鍋</a></li>
-			<li><a href="bbq.html">馳名燒味</a></li>
-			<li><a href="birdsnest_swimbladder_seacucumber.html">燕窩、海參、花膠</a></li>
-			<li><a href="specialties_luxury.html">山珍小菜</a></li>
-			<li><a href="specialties_heart.html">心意小炒</a></li>
-			<li><a class="active" href="noodles_rices.html">粉麵飯</a></li>
-			<li><a href="abalone_sharkfin_list.html">鮑魚、魚翅</a></li>
-			<li><a href="hotpot_list.html">煲仔</a></li>
-			<li><a href="desserts_list.html">甜品</a></li>
-			<li><a href="" >時令小菜 &#9733;</a></li>
+			<li><a href="starters.html">Starters</a></li>
+			<li><a href="soups.html">Double-boiled soup</a></li>
+			<li><a href="bbq.html">Barbequed meat</a></li>
+			<li><a class="tworow" href="birdsnest_swimbladder_seacucumber.html">Bird’s nest, Sea cucumber <br />&amp; Fish maw</a></li>
+			<li><a href="specialties_luxury.html">Yi Dong Specialties</a></li>
+			<li><a href="specialties_heart.html">Home style favourites</a></li>
+			<li><a class="active" href="noodles_rices.html">Noodles &amp; rice</a></li>
+			<li><a href="abalone_sharkfin_list.html">Abalone &amp; Shark's Fin</a></li>
+			<li><a href="hotpot_list.html">Hotpot</a></li>
+			<li><a href="desserts_list.html">Desserts</a></li>
+			<li><a href="" >Seasonal &#9733;</a></li>
 		</ul>
 	</div><!--sidebar-->
 	<div id="gridview" class="menu_body">
     	
+
         <div class="grid_thumb">
 			<div class="heading">
-				<h1>X.O.醬星洲炒米粉</h1>
+				<h1>Stir-fried vermicelli with shrimp, meat and XO sauce</h1>
 				<p class="price">$16<sup>.80</sup></p>
 			</div>
-			<img src="../images/dishes/7_noodlesandrice/xonoodles_s.jpg" alt="xo醬星洲炒米粉" />
+			<img src="../images/dishes/7_noodlesandrice/xonoodles_s.jpg" alt="Stir-fried vermicelli with shrimp, meat and XO sauce" />
 		</div><!--grid_thumb-->
 
 
         <div class="grid_thumb">
 			<div class="heading">
-				<h1>松茸牛肉炒河粉</h1>
+				<h1>Stir-fried rice noodles with matsutake and beef</h1>
 				<p class="price">$18<sup>.80</sup></p>
 			</div>
-			<img src="../images/dishes/7_noodlesandrice/beefnoodle_s.jpg" alt="松茸牛肉炒河粉" />
+			<img src="../images/dishes/7_noodlesandrice/beefnoodle_s.jpg" alt="Stir-fried rice noodles with matsutake and beef" />
 		</div><!--grid_thumb-->
 
 
         <div class="grid_thumb">
 			<div class="heading">
-				<h1>臘味生炒糯米飯</h1>
+				<h1>Stir-fried glutinous rice with preserved meat and dried shrimp</h1>
 				<p class="price">$16<sup>.80</sup></p>
 			</div>
-			<img src="../images/dishes/7_noodlesandrice/porkrice_s.jpg" alt="臘味生炒糯米飯" />
+			<img src="../images/dishes/7_noodlesandrice/porkrice_s.jpg" alt="Stir-fried glutinous rice with preserved meat and dried shrimp" />
 		</div><!--grid_thumb-->
 
 
         <div class="grid_thumb">
 			<div class="heading">
-				<h1>蝦醬頭抽肉鬆炒飯</h1>
+				<h1>Fried rice with minced pork and shrimp sauce</h1>
 				<p class="price">$14<sup>.80</sup></p>
 			</div>
-			<img src="../images/dishes/7_noodlesandrice/shrimprice_s.jpg" alt="蝦醬頭抽肉鬆炒飯" />
+			<img src="../images/dishes/7_noodlesandrice/shrimprice_s.jpg" alt="Fried rice with minced pork and shrimp sauce" />
 		</div><!--grid_thumb-->
 
 
         <div class="grid_thumb">
 			<div class="heading">
-				<h1>豉油皇炒麵</h1>
+				<h1>Stir-fried noodles with soy sauce</h1>
 				<p class="price">$14<sup>.80</sup></p>
 			</div>
-			<img src="../images/dishes/7_noodlesandrice/soysaucenoodle_s.jpg" alt="豉油皇炒麵" />
+			<img src="../images/dishes/7_noodlesandrice/soysaucenoodle_s.jpg" alt="Stir-fried noodles with soy sauce" />
 		</div><!--grid_thumb-->
 
 
         <div class="grid_thumb">
 			<div class="heading">
-				<h1>黑松露海膽蛋白炒飯</h1>
+				<h1>Fried rice with sea urchin meat, black truffle and egg white</h1>
 				<p class="price">$28<sup>.80</sup></p>
 			</div>
-			<img src="../images/dishes/7_noodlesandrice/trufflerice_s.jpg" alt="黑松露海膽蛋白炒飯" />
+			<img src="../images/dishes/7_noodlesandrice/trufflerice_s.jpg" alt="Fried rice with sea urchin meat, black truffle and egg white" />
 		</div><!--grid_thumb-->
-
 
 
 	</div><!-- menu_body-->
@@ -113,7 +112,14 @@
 	  $("div.grid_thumb").each(function(index){
 		  index2 = index + 1;
 	  	  $(this).wrap( "<a href='noodlesrices_list.html?id="+ index2 +"'></a>" );
-		  //$(this).wrap( "<a href='starters_list.html'></a>" );
+		  var dishtitle = $(this).find("h1").text().length;
+		  //console.log(dishtitle);
+		  if(dishtitle > 40){
+		  	$(this).find("h1").addClass("threerow");
+		  }
+		  else if(dishtitle > 23){
+		  	$(this).find("h1").addClass("tworow");
+		  }
 	  });
 	  
 	});
