Edits & Added CNY Special

--- a/english/luxury_list.html
+++ b/english/luxury_list.html
@@ -25,15 +25,15 @@
 		<ul>
 			<li><a href="starters.html">Starters</a></li>
 			<li><a href="soups.html">Double-boiled soup</a></li>
-			<li><a href="bbq.html">Barbequed meat</a></li>
-			<li><a class="tworow" href="birdsnest_swimbladder_seacucumber.html">Bird’s nest, Sea cucumber <br />&amp; Fish maw</a></li>
+			<li><a class="tworow" href="birdsnest_swimbladder_seacucumber.html">Bird's nest, Sea cucumber <br />&amp; Fish maw</a></li>
+            <li><a href="abalone_sharkfin_list.html">Abalone &amp; Shark's Fin</a></li>
+            <li><a href="bbq.html">Barbequed meat</a></li>
 			<li><a class="active" href="specialties_luxury.html">Yi Dong Specialties</a></li>
 			<li><a href="specialties_heart.html">Home style favourites</a></li>
-			<li><a href="noodles_rices.html">Noodles &amp; rice</a></li>
-			<li><a href="abalone_sharkfin_list.html">Abalone &amp; Shark's Fin</a></li>
 			<li><a href="hotpot_list.html">Hotpot</a></li>
+            <li><a href="noodles_rices.html">Noodles &amp; rice</a></li>
 			<li><a href="desserts_list.html">Desserts</a></li>
-			<li><a href="" >Seasonal &#9733;</a></li>
+			<li><a href="" >CNY Special &#9733;</a></li>
 		</ul>
 	</div><!--sidebar-->
 	<div id="listview" class="menu_body">
