--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <a href="english/starters.html">English</a>
     </div>
     
-    
+    <p>世界御廚《阿一鮑魚》楊貫一先生與入室弟子何惠東先生</p>
 </div><!--wrapper-->
 
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script><!--
