--- a/chinese/desserts.html
+++ b/chinese/desserts.html
@@ -23,8 +23,8 @@
 <div id="wrapper" class="clearfix">
 	<div id="sidebar">
 		<ul>
-			<li><a href="starters.html">滋味煎菜</a></li>
-			<li><a href="soups.html">養生燉鍋</a></li>
+			<li><a href="starters.html">滋味前菜</a></li>
+			<li><a href="soups.html">養生燉湯</a></li>
 			<li><a href="bbq.html">馳名燒味</a></li>
 			<li><a href="birdsnest_swimbladder_seacucumber.html">燕窩、海參、花膠</a></li>
 			<li><a href="specialties_luxury.html">山珍小菜</a></li>
