--- a/chinese/luxury_list.html
+++ b/chinese/luxury_list.html
@@ -24,15 +24,15 @@
 <div id="wrapper" class="clearfix">
 	<div id="sidebar">
 		<ul>
-			<li><a href="starters.html">滋味煎菜</a></li>
-			<li><a href="soups.html">養生燉鍋</a></li>
-			<li><a href="bbq.html">馳名燒味</a></li>
+			<li><a href="starters.html">滋味前菜</a></li>
+			<li><a href="soups.html">養生燉湯</a></li>
 			<li><a href="birdsnest_swimbladder_seacucumber.html">燕窩、海參、花膠</a></li>
+			<li><a href="abalone_sharkfin_list.html">鮑魚、魚翅</a></li>
+			<li><a href="bbq.html">馳名燒味</a></li>
 			<li><a class="active" href="specialties_luxury.html">山珍小菜</a></li>
 			<li><a href="specialties_heart.html">心意小炒</a></li>
-			<li><a href="noodles_rices.html">粉麵飯</a></li>
-			<li><a href="abalone_sharkfin_list.html">鮑魚、魚翅</a></li>
 			<li><a href="hotpot_list.html">煲仔</a></li>
+			<li><a href="noodles_rices.html">粉麵飯</a></li>
 			<li><a href="desserts_list.html">甜品</a></li>
 			<li><a href="" >時令小菜 &#9733;</a></li>
 		</ul>
