Added CNY Special with Links

--- a/english/cny.html
+++ b/english/cny.html
@@ -29,7 +29,7 @@
             <li><a href="bbq.html">Barbequed meat</a></li>
 			<li><a href="specialties_luxury.html">Yi Dong Specialties</a></li>
 			<li><a href="specialties_heart.html">Home style favourites</a></li>
-			<li><a href="hotpot_list.html">Hotpot</a></li>
+			<li><a href="hotpot_list.html">Casseroles</a></li>
             <li><a href="noodles_rices.html">Noodles &amp; rice</a></li>
 			<li><a href="desserts_list.html">Desserts</a></li>
 			<li><a href="cny.html"  class="active">CNY Special &#9733;</a></li>
@@ -42,7 +42,7 @@
 			<div class="heading">
 				<h1>Individual Dishes</h1>
 			</div>
-            <img src="../images/dishes/1_starters/salmonsmoke_s.jpg" alt="Smoked salmon roll" />
+            <img src="../images/dishes/cny/cny_s.jpg" alt="Smoked salmon roll" />
             
 		</div><!--grid_thumb-->
         </a>
@@ -53,7 +53,7 @@
 			<div class="heading">
 				<h1 class="">Combos</h1>
 			</div>
-			<img src="../images/dishes/1_starters/chickenfeet_s.jpg" alt="Chicken feet in vinegar with pepper" />
+			<img src="../images/dishes/cny/cny_s.jpg" alt="Chicken feet in vinegar with pepper" />
 		</div><!--grid_thumb-->
         </a>
 
