--- a/english/cny_list.html
+++ b/english/cny_list.html
@@ -16,7 +16,7 @@
 <div id="header"><!--
 	<span class="helper"></span>-->
     <a href="../index.html"><img src="../images/logo.png" alt="Chef Tony Menu" /></a>
-    <a id="back" href="cny.html">Back</a>
+    <a id="back" class="is_english" href="cny.html">Back</a>
 	<a href="../chinese/cny_list.html" class="lang">中文</a> </div><!--header-->
 
 <div id="wrapper" class="clearfix is_english">
@@ -29,7 +29,7 @@
             <li><a href="bbq.html">Barbequed meat</a></li>
 			<li><a href="specialties_luxury.html">Yi Dong Specialties</a></li>
 			<li><a href="specialties_heart.html">Home style favourites</a></li>
-			<li><a href="hotpot_list.html">Hotpot</a></li>
+			<li><a href="hotpot_list.html">Casseroles</a></li>
             <li><a href="noodles_rices.html">Noodles &amp; rice</a></li>
 			<li><a href="desserts_list.html">Desserts</a></li>
 			<li><a  class="active" href="cny.html">CNY Special &#9733;</a></li>
@@ -40,7 +40,7 @@
     	<ul class="bxslider">
         
 		<li class="list_item" style="min-height:420px;">
-        	<img src="../images/dishes/8_abalone/superabalone_l.jpg" alt="至尊鮑汁扒鮑魚" />
+        	<img src="../images/dishes/cny/cny_l.jpg" alt="至尊鮑汁扒鮑魚" />
         </li>
         
         <li class="list_item noimg">
