--- a/english/luxury_list.html
+++ b/english/luxury_list.html
@@ -17,7 +17,7 @@
 <div id="header"><!--
 	<span class="helper"></span>-->
     <a href="../index.html"><img src="../images/logo.png" alt="Chef Tony Menu" /></a>
-    <a id="back" href="specialties_luxury.html">Back</a>
+    <a id="back" class="is_english" href="specialties_luxury.html">Back</a>
 	<a href="../chinese/luxury_list.html" class="lang">中文</a> </div><!--header-->
 
 <div id="wrapper" class="clearfix is_english">
@@ -30,10 +30,10 @@
             <li><a href="bbq.html">Barbequed meat</a></li>
 			<li><a class="active" href="specialties_luxury.html">Yi Dong Specialties</a></li>
 			<li><a href="specialties_heart.html">Home style favourites</a></li>
-			<li><a href="hotpot_list.html">Hotpot</a></li>
+			<li><a href="hotpot_list.html">Casseroles</a></li>
             <li><a href="noodles_rices.html">Noodles &amp; rice</a></li>
 			<li><a href="desserts_list.html">Desserts</a></li>
-			<li><a href="" >CNY Special &#9733;</a></li>
+			<li><a href="cny.html" >CNY Special &#9733;</a></li>
 		</ul>
 	</div><!--sidebar-->
 	<div id="listview" class="menu_body">
