--- a/chinese/cny.html
+++ b/chinese/cny.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <meta name="apple-mobile-web-app-capable" content="yes" />
 
-<title>Chef Tony Menu - Soups - Grid View</title>
+<title>Chef Tony Menu - Chinese New Year Special - Grid View</title>
 <link rel="stylesheet" type="text/css" href="../css/reset.css">
 <link rel="stylesheet" type="text/css" href="../css/main.css">
 <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300' rel='stylesheet' type='text/css'>
@@ -17,14 +17,14 @@
 <div id="header"><!--
 	<span class="helper"></span>-->
     <a href="../index.html"><img src="../images/logo.png" alt="Chef Tony Menu" /></a>
-	<a class="lang" href="../english/soups.html">English</a> 
+	<a class="lang" href="../english/cny.html">English</a> 
 </div><!--header-->
 
 <div id="wrapper" class="clearfix">
 	<div id="sidebar">
 		<ul>
 			<li><a href="starters.html">滋味前菜</a></li>
-			<li><a class="active" href="soups.html">養生燉湯</a></li>
+			<li><a href="soups.html">養生燉湯</a></li>
 			<li><a href="birdsnest_swimbladder_seacucumber.html">燕窩、海參、花膠</a></li>
 			<li><a href="abalone_sharkfin_list.html">鮑魚、魚翅</a></li>
 			<li><a href="bbq.html">馳名燒味</a></li>
@@ -33,74 +33,29 @@
 			<li><a href="hotpot_list.html">煲仔</a></li>
 			<li><a href="noodles_rices.html">粉麵飯</a></li>
 			<li><a href="desserts_list.html">甜品</a></li>
-			<li><a href="cny.html" >新年小菜 &#9733;</a></li>
+			<li><a class="active" href="cny.html" >新年小菜 &#9733;</a></li>
 		</ul>
 	</div><!--sidebar-->
 	<div id="gridview" class="menu_body">
     	
-        
+        <a href="cny_list.html">
         <div class="grid_thumb">
 			<div class="heading">
-				<h1>松茸燉土雞螺頭</h1>
-				<p class="price">$58<sup>.80</sup></p>
+				<h1>小菜</h1>
 			</div>
-			<img src="../images/dishes/2_soups/chickoyster_s.jpg" alt="松茸燉土雞螺頭" />
+			<img src="../images/dishes/cny/cny_s.jpg" alt="" />
 		</div><!--grid_thumb-->
+        </a>
 
 
+        <a href="cny_combo_list.html">
         <div class="grid_thumb">
 			<div class="heading">
-				<h1>海馬遼參養生湯</h1>
-				<p class="price">$88<sup>.80</sup></p>
+				<h1>套餐</h1>
 			</div>
-			<img src="../images/dishes/2_soups/seahorsesoup_s.jpg" alt="海馬遼參養生湯" />
+			<img src="../images/dishes/cny/cny_s.jpg" alt="" />
 		</div><!--grid_thumb-->
-
-
-        <div class="grid_thumb">
-			<div class="heading">
-				<h1>靈芝天麻燉魚頭</h1>
-				<p class="price">$68<sup>.80</sup></p>
-			</div>
-			<img src="../images/dishes/2_soups/fishhead_s.jpg" alt="靈芝天麻燉魚頭" />
-		</div><!--grid_thumb-->
-
-
-        <div class="grid_thumb">
-			<div class="heading">
-				<h1>靈芝石斛洋參燉老鴿</h1>
-				<p class="price">$68<sup>.80</sup></p>
-			</div>
-			<img src="../images/dishes/2_soups/oldpigeon_s.jpg" alt="靈芝石斛洋參燉老鴿" />
-		</div><!--grid_thumb-->
-
-
-        <div class="grid_thumb">
-			<div class="heading">
-				<h1>瑤柱竹笙燉節瓜</h1>
-				<p class="price">$48<sup>.80</sup></p>
-			</div>
-			<img src="../images/dishes/2_soups/scallopmelon_s.jpg" alt="瑤柱竹笙燉節瓜" />
-		</div><!--grid_thumb-->
-
-
-        <div class="grid_thumb">
-			<div class="heading">
-				<h1>礦泉水花膠肉汁湯</h1>
-				<p class="price">$88<sup>.80</sup></p>
-			</div>
-			<img src="../images/dishes/2_soups/mineralsoup_s.jpg" alt="礦泉水花膠肉汁湯" />
-		</div><!--grid_thumb-->
-
-
-        <div class="grid_thumb">
-			<div class="heading">
-				<h1>黑松露燉螺片乾貝</h1>
-				<p class="price">$88<sup>.80</sup></p>
-			</div>
-			<img src="../images/dishes/2_soups/trufflescallop_s.jpg" alt="黑松露燉螺片乾貝" />
-		</div><!--grid_thumb-->
-
+        </a>
 
 
 
@@ -124,7 +79,7 @@
 	  
 	  $("div.grid_thumb").each(function(index){
 		  index2 = index + 1;
-	  	  $(this).wrap( "<a href='soups_list.html?id="+ index2 +"'></a>" );
+	  	  //$(this).wrap( "<a href='noodlesrices_list.html?id="+ index2 +"'></a>" );
 		  //$(this).wrap( "<a href='starters_list.html'></a>" );
 	  });
 	  
