--- a/chinese/desserts.html
+++ b/chinese/desserts.html
@@ -33,7 +33,7 @@
 			<li><a href="abalone_sharkfin_list.html">鮑魚、魚翅</a></li>
 			<li><a href="hotpot_list.html">煲仔</a></li>
 			<li><a class="active" href="desserts.html">甜品</a></li>
-			<li><a href="" >時令小菜 &#9733;</a></li>
+			<li><a href="cny.html" >新年小菜 &#9733;</a></li>
 		</ul>
 	</div><!--sidebar-->
 	<div id="gridview" class="menu_body">
