--- a/chinese/desserts_list.html
+++ b/chinese/desserts_list.html
@@ -18,7 +18,7 @@
 	<span class="helper"></span>-->
     <a href="../index.html"><img src="../images/logo.png" alt="Chef Tony Menu" /></a>
     <!--<a id="back" href="abalone_sharkfin.html">返回</a>-->
-	<a href="../english/abalone_sharkfin_list.html" class="lang">English</a> 
+	<a href="../english/desserts_list.html" class="lang">English</a> 
 </div><!--header-->
 
 <div id="wrapper" class="clearfix">
@@ -34,7 +34,7 @@
 			<li><a href="hotpot_list.html">煲仔</a></li>
 			<li><a href="noodles_rices.html">粉麵飯</a></li>
 			<li><a class="active" href="desserts_list.html">甜品</a></li>
-			<li><a href="" >時令小菜 &#9733;</a></li>
+			<li><a href="cny.html" >新年小菜 &#9733;</a></li>
 		</ul>
 	</div><!--sidebar-->
 	<div id="listview" class="menu_body">
