--- a/chinese/hotpot_list.html
+++ b/chinese/hotpot_list.html
@@ -34,7 +34,7 @@
 			<li><a class="active" href="hotpot_list.html">煲仔</a></li>
 			<li><a href="noodles_rices.html">粉麵飯</a></li>
 			<li><a href="desserts_list.html">甜品</a></li>
-			<li><a href="" >時令小菜 &#9733;</a></li>
+			<li><a href="cny.html" >新年小菜 &#9733;</a></li>
 		</ul>
 	</div><!--sidebar-->
 	<div id="listview" class="menu_body" >
@@ -197,7 +197,7 @@
 			//startSlide: id - 1,
 			mode: 'vertical',
 			pager: false,
-			infiniteLoop: false,
+			infiniteLoop: true,
 			//auto: true,
 			controls: false
 		});
