--- a/chinese/list.html
+++ b/chinese/list.html
@@ -34,7 +34,7 @@
 			<li><a href="">煲仔</a></li>
 			<li><a href="">主食</a></li>
 			<li><a href="">甜品</a></li>
-			<li><a href="" >時令小菜 &#9733;</a></li>
+			<li><a href="cny.html" >新年小菜 &#9733;</a></li>
 		</ul>
 	</div><!--sidebar-->
 	<div id="listview" class="menu_body">
