--- a/chinese/specialties_luxury.html
+++ b/chinese/specialties_luxury.html
@@ -33,7 +33,7 @@
 			<li><a href="hotpot_list.html">煲仔</a></li>
 			<li><a href="noodles_rices.html">粉麵飯</a></li>
 			<li><a href="desserts_list.html">甜品</a></li>
-			<li><a href="" >時令小菜 &#9733;</a></li>
+			<li><a href="cny.html" >新年小菜 &#9733;</a></li>
 		</ul>
 	</div><!--sidebar-->
 	<div id="gridview" class="menu_body">
@@ -222,6 +222,12 @@
 			window.scrollTo(0, 1);
 		}, 0);
 	});
+	$(document).bind(
+      'touchmove',
+          function(e) {
+            e.preventDefault();
+          }
+	);
 	
 </script>
 </body>
