--- a/english/noodles_rices.html
+++ b/english/noodles_rices.html
@@ -29,10 +29,10 @@
             <li><a href="bbq.html">Barbequed meat</a></li>
 			<li><a href="specialties_luxury.html">Yi Dong Specialties</a></li>
 			<li><a href="specialties_heart.html">Home style favourites</a></li>
-			<li><a href="hotpot_list.html">Hotpot</a></li>
+			<li><a href="hotpot_list.html">Casseroles</a></li>
             <li><a class="active" href="noodles_rices.html">Noodles &amp; rice</a></li>
 			<li><a href="desserts_list.html">Desserts</a></li>
-			<li><a href="" >CNY Special &#9733;</a></li>
+			<li><a href="cny.html" >CNY Special &#9733;</a></li>
 		</ul>
 	</div><!--sidebar-->
 	<div id="gridview" class="menu_body">
