--- a/english/starters_list.html
+++ b/english/starters_list.html
@@ -16,7 +16,7 @@
 <div id="header"><!--
 	<span class="helper"></span>-->
     <a href="../index.html"><img src="../images/logo.png" alt="Chef Tony Menu" /></a>
-    <a id="back" href="starters.html">Back</a>
+    <a id="back" class="is_english" href="starters.html">Back</a>
 	<a href="../chinese/starters_list.html" class="lang">中文</a> </div><!--header-->
 
 <div id="wrapper" class="clearfix is_english">
@@ -29,7 +29,7 @@
             <li><a href="bbq.html">Barbequed meat</a></li>
 			<li><a href="specialties_luxury.html">Yi Dong Specialties</a></li>
 			<li><a href="specialties_heart.html">Home style favourites</a></li>
-			<li><a href="hotpot_list.html">Hotpot</a></li>
+			<li><a href="hotpot_list.html">Casseroles</a></li>
             <li><a href="noodles_rices.html">Noodles &amp; rice</a></li>
 			<li><a href="desserts_list.html">Desserts</a></li>
 			<li><a href="cny.html">CNY Special &#9733;</a></li>
