--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	
     <div class="link_wrap">
         <a href="chinese/starters.html">中文</a>
-        <a href="english/starters.html">English</a>
+        <a style="font-weight:300;" href="english/starters.html">English</a>
     </div>
     
     <p>世界御廚《阿一鮑魚》楊貫一先生與入室弟子何惠東先生</p>
@@ -43,6 +43,12 @@
 			window.scrollTo(0, 1);
 		}, 0);
 	});
+	$(document).bind(
+      'touchmove',
+          function(e) {
+            e.preventDefault();
+          }
+	);
 	
 </script>
 </body>
