Add config.xml, fixed minor layout issues

--- a/chinese/specialties_luxury.html
+++ b/chinese/specialties_luxury.html
@@ -93,7 +93,7 @@
 
         <div class="grid_thumb">
 			<div class="heading">
-				<h1>碧綠羊肚菌煎釀花枝丸</h1>
+				<h1 class="tworow">碧綠羊肚菌煎釀<br />花枝丸</h1>
 				<p class="price">$18<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/5_specialties_shanzhen/lambfishball_s.jpg" alt="碧綠羊肚菌煎釀花枝丸" />
@@ -222,12 +222,7 @@
 			window.scrollTo(0, 1);
 		}, 0);
 	});
-	$(document).bind(
-      'touchmove',
-          function(e) {
-            e.preventDefault();
-          }
-	);
+	
 	
 </script>
 </body>
