Final CNY Updates

--- a/chinese/cny.html
+++ b/chinese/cny.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <meta name="apple-mobile-web-app-capable" content="yes" />
 
-<title>Chef Tony Menu - Chinese New Year Special - Grid View</title>
+<title>Chef Tony Menu - Chinese New Year Specialties - Grid View</title>
 <link rel="stylesheet" type="text/css" href="../css/reset.css">
 <link rel="stylesheet" type="text/css" href="../css/main.css">
 <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300' rel='stylesheet' type='text/css'>
@@ -33,7 +33,7 @@
 			<li><a href="hotpot_list.html">煲仔</a></li>
 			<li><a href="noodles_rices.html">粉麵飯</a></li>
 			<li><a href="desserts_list.html">甜品</a></li>
-			<li><a class="active" href="cny.html" >新年小菜 &#9733;</a></li>
+			<li><a class="active" href="cny.html" >新春賀年小菜 &#9733;</a></li>
 		</ul>
 	</div><!--sidebar-->
 	<div id="gridview" class="menu_body">
@@ -41,9 +41,9 @@
         <a href="cny_list.html">
         <div class="grid_thumb">
 			<div class="heading">
-				<h1>小菜</h1>
+				<h1>新春賀年小菜</h1>
 			</div>
-			<img src="../images/dishes/cny/cny_s.jpg" alt="" />
+			<img src="../images/dishes/cny/pigeon_s.jpg" alt="" />
 		</div><!--grid_thumb-->
         </a>
 
@@ -51,9 +51,18 @@
         <a href="cny_combo_list.html">
         <div class="grid_thumb">
 			<div class="heading">
-				<h1>套餐</h1>
+				<h1>新春賀年套餐 4-6人</h1>
 			</div>
-			<img src="../images/dishes/cny/cny_s.jpg" alt="" />
+			<img src="../images/dishes/cny/YDCNY2014_254x174_6ppl-01.jpg" alt="" />
+		</div><!--grid_thumb-->
+        </a>
+        
+        <a href="cny_combo_list_for10.html">
+        <div class="grid_thumb">
+			<div class="heading">
+				<h1>新春賀年套餐 10人</h1>
+			</div>
+			<img src="../images/dishes/cny/YDCNY2014_254x174_10ppl-01.jpg" alt="" />
 		</div><!--grid_thumb-->
         </a>
 
