--- a/english/noodlesrices_list.html
+++ b/english/noodlesrices_list.html
@@ -33,7 +33,7 @@
 			<li><a href="hotpot_list.html">Casseroles</a></li>
             <li><a class="active" href="noodles_rices.html">Noodles &amp; rice</a></li>
 			<li><a href="desserts_list.html">Desserts</a></li>
-			<li><a href="cny.html" >CNY Special &#9733;</a></li>
+			<li><a href="cny.html" >Chinese New Year Specialties &#9733;</a></li>
 		</ul>
 	</div><!--sidebar-->
 	<div id="listview" class="menu_body">
