--- a/chinese/noodles_rices.html
+++ b/chinese/noodles_rices.html
@@ -33,7 +33,7 @@
 			<li><a href="hotpot_list.html">煲仔</a></li>
 			<li><a class="active" href="noodles_rices.html">粉麵飯</a></li>
 			<li><a href="desserts_list.html">甜品</a></li>
-			<li><a href="cny.html" >新年小菜 &#9733;</a></li>
+			<li><a href="cny.html" >新春賀年小菜 &#9733;</a></li>
 		</ul>
 	</div><!--sidebar-->
 	<div id="gridview" class="menu_body">
