CNY Combo for 10 link fix

--- a/english/cny.html
+++ b/english/cny.html
@@ -58,7 +58,7 @@
         </a>
         
          
-        <a href="cny_combo_list.html">
+        <a href="cny_combo_list_for10.html">
         <div class="grid_thumb">
 			<div class="heading">
 				<h1 class="tworow">Chinese New Year Set Dinner for 10 persons</h1>
