--- a/english/cny_combo_list.html
+++ b/english/cny_combo_list.html
@@ -112,7 +112,7 @@
 			console.log(getParameterByName(id));*/
 		
 		$('.bxslider').bxSlider({
-		  
+		  infiniteLoop: false,
 		  mode: 'vertical',
 		  pager: false,
 		  //auto: true,
