Fix "go back to first slide" issue

--- a/chinese/starters_list.html
+++ b/chinese/starters_list.html
@@ -17,8 +17,7 @@
 	<span class="helper"></span>-->
     <a href="../index.html"><img src="../images/logo.png" alt="Chef Tony Menu" /></a>
     <a id="back" href="starters.html">返回</a>
-	<a href="../english/starters_list.html" class="lang">English</a> 
-</div><!--header-->
+	<a href="../english/starters_list.html?id=1" class="lang">English</a> </div><!--header-->
 
 <div id="wrapper" class="clearfix">
 	<div id="sidebar">
@@ -105,7 +104,7 @@
                 </div>
 				<p class="price">$5<sup>.98</sup></p>
 			</div>
-			<img src="../images/dishes/1_starters/onionjudae_l.jpg" alt="陳醋酸薑皮蛋" />
+			<img src="../images/dishes/1_starters/vinegaregg_l.jpg" alt="陳醋酸薑皮蛋" />
 		</li><!--list_item-->
         
         <li class="list_item">
