--- a/english/cny_combo_list_for10.html
+++ b/english/cny_combo_list_for10.html
@@ -17,7 +17,7 @@
 	<span class="helper"></span>-->
     <a href="../index.html"><img src="../images/logo.png" alt="Chef Tony Menu" /></a>
     <a id="back" class="is_english" href="cny.html">Back</a>
-	<a href="../chinese/cny_combo_list_for10.html" class="lang">中文</a> </div><!--header-->
+	<a href="../chinese/cny_combo_list_for10.html?id=1" class="lang">中文</a> </div><!--header-->
 
 <div id="wrapper" class="clearfix is_english">
 	<div id="sidebar">
