--- a/english/heart_list.html
+++ b/english/heart_list.html
@@ -18,7 +18,7 @@
 	<span class="helper"></span>-->
     <a href="../index.html"><img src="../images/logo.png" alt="Chef Tony Menu" /></a>
     <a id="back" class="is_english" href="specialties_heart.html">Back</a>
-	<a href="../chinese/heart_list.html" class="lang">中文</a> </div><!--header-->
+	<a href="../chinese/heart_list.html?id=1" class="lang">中文</a> </div><!--header-->
 
 <div id="wrapper" class="clearfix is_english">
 	<div id="sidebar">
