--- a/chinese/birdsnest_etc_list.html
+++ b/chinese/birdsnest_etc_list.html
@@ -18,8 +18,7 @@
 	<span class="helper"></span>-->
     <a href="../index.html"><img src="../images/logo.png" alt="Chef Tony Menu" /></a>
     <a id="back" href="birdsnest_swimbladder_seacucumber.html">返回</a>
-	<a href="../english/birdsnest_etc_list.html" class="lang">English</a> 
-</div><!--header-->
+	<a href="../english/birdsnest_etc_list.html?id=1" class="lang">English</a> </div><!--header-->
 
 <div id="wrapper" class="clearfix">
 	<div id="sidebar">
