--- a/chinese/cny_list.html
+++ b/chinese/cny_list.html
@@ -17,7 +17,7 @@
 	<span class="helper"></span>-->
     <a href="../index.html"><img src="../images/logo.png" alt="Chef Tony Menu" /></a>
     <a id="back" class="" href="cny.html">返回</a>
-	<a href="../english/cny_list.html" class="lang">English</a> </div><!--header-->
+	<a href="../english/cny_list.html?id=1" class="lang">English</a> </div><!--header-->
 
 <div id="wrapper" class="clearfix ">
 	<div id="sidebar">
