--- a/chinese/desserts_list.html
+++ b/chinese/desserts_list.html
@@ -18,8 +18,7 @@
 	<span class="helper"></span>-->
     <a href="../index.html"><img src="../images/logo.png" alt="Chef Tony Menu" /></a>
     <!--<a id="back" href="abalone_sharkfin.html">返回</a>-->
-	<a href="../english/desserts_list.html" class="lang">English</a> 
-</div><!--header-->
+	<a href="../english/desserts_list.html?id=1" class="lang">English</a> </div><!--header-->
 
 <div id="wrapper" class="clearfix">
 	<div id="sidebar">
