--- a/chinese/starters.html
+++ b/chinese/starters.html
@@ -17,8 +17,7 @@
 <div id="header"><!--
 	<span class="helper"></span>-->
     <a href="../index.html"><img src="../images/logo.png" alt="Chef Tony Menu" /></a>
-	<a href="../english/starters.html" class="lang">English</a> 
-</div><!--header-->
+	<a href="../english/starters.html" class="lang">English</a> </div><!--header-->
 
 <div id="wrapper" class="clearfix">
 	<div id="sidebar">
