--- a/english/starters.html
+++ b/english/starters.html
@@ -17,7 +17,7 @@
 <div id="header"><!--
 	<span class="helper"></span>-->
     <a href="../index.html"><img src="../images/logo.png" alt="Chef Tony Menu" /></a>
-	<a href="../chinese/starters.html" class="lang">中文</a> </div><!--header-->
+	<a href="../chinese/starters.html?id=1" class="lang">中文</a> </div><!--header-->
 
 <div id="wrapper" class="clearfix is_english">
 	<div id="sidebar">
