--- a/english/starters_list.html
+++ b/english/starters_list.html
@@ -17,7 +17,7 @@
 	<span class="helper"></span>-->
     <a href="../index.html"><img src="../images/logo.png" alt="Chef Tony Menu" /></a>
     <a id="back" class="is_english" href="starters.html">Back</a>
-	<a href="../chinese/starters_list.html" class="lang">中文</a> </div><!--header-->
+	<a href="../chinese/starters_list.html?id=1" class="lang">中文</a> </div><!--header-->
 
 <div id="wrapper" class="clearfix is_english">
 	<div id="sidebar">
@@ -104,7 +104,7 @@
                 </div>
 				<p class="price">$5<sup>.98</sup></p>
 			</div>
-			<img src="../images/dishes/1_starters/onionjudae_l.jpg" alt="Preserved egg slices trimmed with sour ginger" />
+			<img src="../images/dishes/1_starters/vinegaregg_l.jpg" alt="Preserved egg slices trimmed with sour ginger" />
 		</li><!--list_item-->
         
         <li class="list_item">
