--- a/english/cny_combo_list_for10.html
+++ b/english/cny_combo_list_for10.html
@@ -40,7 +40,7 @@
     	<ul class="bxslider">
         
 		<li class="list_item">
-            <div class="heading" style="visibility:hidden">
+            <div class="heading" style="visibility:hidden; display:none">
 				<h1>Combo for 2</h1>
                 <p class="desc">在此填入菜餚簡介信息, 在此填入菜餚簡介信息,在此填入菜餚簡介信息,在此填入.</p>
                 <div class="tags">
@@ -53,7 +53,7 @@
 		</li><!--list_item-->
         
         <li class="list_item">
-			<div class="heading"  style="visibility:hidden">
+			<div class="heading"  style="visibility:hidden; display:none">
 				<h1>Combo for 4</h1>
                 <p class="desc"></p>
                 <div class="tags">
