Final Price updates & word changes

--- a/chinese/bbq.html
+++ b/chinese/bbq.html
@@ -84,8 +84,8 @@
 
         <div class="grid_thumb">
 			<div class="heading">
-				<h1>生炸乳鴿(一隻)</h1>
-				<p class="price">$16<sup>.80</sup></p>
+				<h1>翡翠骨香鴿甫</h1>
+				<p class="price">$26<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/3_bbq/pigeon_s.jpg" alt="生炸乳鴿" />
 		</div><!--grid_thumb-->
@@ -112,7 +112,7 @@
         <div class="grid_thumb">
 			<div class="heading">
 				<h1>黑松露撈雞(半隻)</h1>
-				<p class="price">$23<sup>.80</sup></p>
+				<p class="price">$26<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/3_bbq/trufflechicken_s.jpg" alt="黑松露撈雞(半隻)" />
 		</div><!--grid_thumb-->
