--- a/chinese/bbq_list.html
+++ b/chinese/bbq_list.html
@@ -100,11 +100,11 @@
         
         <li class="list_item">
 			<div class="heading">
-				<h1>生炸乳鴿(一隻)</h1>
+				<h1>翡翠骨香鴿甫</h1>
                 <p class="desc"></p>
                 <div class="tags">
                 </div>
-				<p class="price">$16<sup>.80</sup></p>
+				<p class="price">$26<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/3_bbq/pigeon_l.jpg" alt="生炸乳鴿" />
 		</li><!--list_item-->
@@ -137,7 +137,7 @@
                 <p class="desc"></p>
                 <div class="tags">
                 </div>
-				<p class="price">$23<sup>.80</sup></p>
+				<p class="price">$26<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/3_bbq/trufflechicken_l.jpg" alt="黑松露撈雞" />
 		</li><!--list_item-->
