--- a/chinese/birdsnest_etc_list.html
+++ b/chinese/birdsnest_etc_list.html
@@ -60,7 +60,7 @@
                 <p class="desc"></p>
                 <div class="tags">
                 </div>
-				<p class="price seasonal">時價</p>
+				<p class="price ">$36<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/4_birdnest/seacucumber_l.jpg" alt="野米松茸煮遼參" />
 		</li><!--list_item-->
@@ -71,18 +71,18 @@
                 <p class="desc"></p>
                 <div class="tags">
                 </div>
-				<p class="price">$23<sup>.80</sup></p>
+				<p class="price">$38<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/4_birdnest/friedgarlic_l.jpg" alt="金蒜黑松露爆炒遼參" />
 		</li><!--list_item-->
         
         <li class="list_item">
 			<div class="heading">
-				<h1>陳醋浸遼參</h1>
+				<h1>陳醋浸遼參 (1條)</h1>
                 <p class="desc"></p>
                 <div class="tags">
                 </div>
-				<p class="price seasonal">時價</p>
+				<p class="price ">$33<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/4_birdnest/vinegarseacucumber_l.jpg" alt="陳醋浸遼參" />
 		</li><!--list_item-->
@@ -93,7 +93,7 @@
                 <p class="desc"></p>
                 <div class="tags">
                 </div>
-				<p class="price seasonal">時價</p>
+				<p class="price ">$68<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/4_birdnest/boiledswimbladder_l.jpg" alt="頂湯堂灼白花膠" />
 		</li><!--list_item-->
@@ -111,11 +111,11 @@
         
         <li class="list_item">
 			<div class="heading">
-				<h1>鮑汁遼參</h1>
+				<h1>鮑汁遼參 (1條)</h1>
                 <p class="desc"></p>
                 <div class="tags">
                 </div>
-				<p class="price seasonal">時價</p>
+				<p class="price ">$33<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/4_birdnest/abaloneseacucumber_l.jpg" alt="鮑汁遼參" />
 		</li><!--list_item-->
