--- a/chinese/birdsnest_swimbladder_seacucumber.html
+++ b/chinese/birdsnest_swimbladder_seacucumber.html
@@ -49,7 +49,7 @@
         <div class="grid_thumb">
 			<div class="heading">
 				<h1>野米松茸煮遼參</h1>
-				<p class="price seasonal">時價</p>
+				<p class="price ">$36<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/4_birdnest/seacucumber_s.jpg" alt="野米松茸煮遼參" />
 		</div><!--grid_thumb-->
@@ -57,15 +57,15 @@
         <div class="grid_thumb">
 			<div class="heading">
 				<h1 class="tworow">金蒜黑松露爆炒遼參 (例) </h1>
-				<p class="price">$23<sup>.80</sup></p>
+				<p class="price">$38<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/4_birdnest/friedgarlic_s.jpg" alt="金蒜黑松露爆炒遼參" />
 		</div><!--grid_thumb-->
 
         <div class="grid_thumb">
 			<div class="heading">
-				<h1>陳醋浸遼參</h1>
-				<p class="price seasonal">時價</p>
+				<h1>陳醋浸遼參 (1條)</h1>
+				<p class="price ">$33<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/4_birdnest/vinegarseacucumber_s.jpg" alt="陳醋浸遼參" />
 		</div><!--grid_thumb-->
@@ -73,7 +73,7 @@
         <div class="grid_thumb">
 			<div class="heading">
 				<h1>頂湯堂灼白花膠</h1>
-				<p class="price seasonal">時價</p>
+				<p class="price ">$68<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/4_birdnest/boiledswimbladder_s.jpg" alt="頂湯堂灼白花膠" />
 		</div><!--grid_thumb-->
@@ -89,8 +89,8 @@
 
         <div class="grid_thumb">
 			<div class="heading">
-				<h1>鮑汁遼參</h1>
-				<p class="price seasonal">時價</p>
+				<h1>鮑汁遼參 (1條)</h1>
+				<p class="price ">$33<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/4_birdnest/abaloneseacucumber_s.jpg" alt="鮑汁遼參" />
 		</div><!--grid_thumb-->
