--- a/chinese/cny.html
+++ b/chinese/cny.html
@@ -33,6 +33,7 @@
 			<li><a href="hotpot_list.html">煲仔</a></li>
 			<li><a href="noodles_rices.html">粉麵飯</a></li>
 			<li><a href="desserts_list.html">甜品</a></li>
+            <li><a href="desserts_list.html">飲料</a></li>
 			<li><a class="active" href="cny.html" >新春賀年小菜 &#9733;</a></li>
 		</ul>
 	</div><!--sidebar-->
