--- a/english/bbq.html
+++ b/english/bbq.html
@@ -84,8 +84,8 @@
 
         <div class="grid_thumb">
 			<div class="heading">
-				<h1>Deep-fried tender squab (Whole)</h1>
-				<p class="price">$16<sup>.80</sup></p>
+				<h1>Deep-fried tender squab trimmed with seasonal greens</h1>
+				<p class="price">$26<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/3_bbq/pigeon_s.jpg" alt="生炸乳鴿" />
 		</div><!--grid_thumb-->
@@ -112,7 +112,7 @@
         <div class="grid_thumb">
 			<div class="heading">
 				<h1 class="threerow">Marinated chicken trimmed with black truffle flakes (Half)</h1>
-				<p class="price">$23<sup>.80</sup></p>
+				<p class="price">$26<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/3_bbq/trufflechicken_s.jpg" alt="Marinated chicken trimmed with black truffle flakes" />
 		</div><!--grid_thumb-->
