--- a/english/cny.html
+++ b/english/cny.html
@@ -32,6 +32,7 @@
 			<li><a href="hotpot_list.html">Casseroles</a></li>
             <li><a href="noodles_rices.html">Noodles &amp; rice</a></li>
 			<li><a href="desserts_list.html">Desserts</a></li>
+            <li><a href="desserts_list.html">Drinks</a></li>
 			<li><a href="cny.html"  class=" tworow active">Chinese New Year <br />Specialties &#9733;</a></li>
 		</ul>
 	</div><!--sidebar-->
