--- a/english/cny_combo_list_for10.html
+++ b/english/cny_combo_list_for10.html
@@ -32,6 +32,7 @@
 			<li><a href="hotpot_list.html">Casseroles</a></li>
             <li><a href="noodles_rices.html">Noodles &amp; rice</a></li>
 			<li><a href="desserts_list.html">Desserts</a></li>
+            <li><a href="beverage_list.html">Beverage</a></li>
 			<li><a  class="active tworow" href="cny.html">Chinese New Year <br />Specialties &#9733;</a></li>
 		</ul>
 	</div><!--sidebar-->
