--- a/english/heart_list.html
+++ b/english/heart_list.html
@@ -33,7 +33,8 @@
 			<li><a href="hotpot_list.html">Casseroles</a></li>
             <li><a href="noodles_rices.html">Noodles &amp; rice</a></li>
 			<li><a href="desserts_list.html">Desserts</a></li>
-			<li><a href="cny.html" class="tworow">Chinese New Year <br />Specialties &#9733;</a></li>
+			<li><a href="beverage_list.html">Beverage</a></li>
+<li><a href="cny.html" class="tworow">Chinese New Year <br />Specialties &#9733;</a></li>
 		</ul>
 	</div><!--sidebar-->
 	<div id="listview" class="menu_body">
