Spelling fix on CNY

--- a/chinese/cny_list.html
+++ b/chinese/cny_list.html
@@ -164,7 +164,7 @@
 			</div>
             
             <div class="heading">
-				<h1>太極兩儀 (蟹肉, 瑤柱扒荳苗)</h1>
+				<h1>太極兩儀 (蟹肉瑤柱扒荳苗)</h1>
                 <p class="desc"></p>
                 <div class="tags">
                 </div>
@@ -234,7 +234,7 @@
 			</div>
             
             <div class="heading">
-				<h1>鵬程萬里 (特式魚露雞)(半隻)</h1>
+				<h1>鵬程萬里 (黑松露撈雞)(半隻)</h1>
                 <p class="desc"></p>
                 <div class="tags">
                 </div>
