--- a/english/cny_list.html
+++ b/english/cny_list.html
@@ -55,7 +55,7 @@
 			</div>
             
             <div class="heading">
-				<h1>Deep-fried tender squab (Whole)</h1>
+				<h1>Deep-fried tender squab trimmed with seasonal greens</h1>
                 <p class="desc"></p>
                 <div class="tags">
                 </div>
@@ -234,7 +234,7 @@
 			</div>
             
             <div class="heading">
-				<h1>Chef Tony specialy chicken in fish sauce (Half)</h1>
+				<h1>Marinated chicken trimmed with black truffle flakes (Half)</h1>
                 <p class="desc"></p>
                 <div class="tags">
                 </div>
