Fixed lobster typo on Specialties

--- a/english/luxury_list.html
+++ b/english/luxury_list.html
@@ -90,13 +90,13 @@
         
         <li class="list_item">
 			<div class="heading">
-				<h1>Pan-fried morel mushroom stuffed with cuttlefish paste</h1>
+				<h1>Stir-fried lobster with home made spicy sauce</h1>
                 <p class="desc"></p>
                 <div class="tags">
                 </div>
 				<p class="price seasonal">Seasonal</p>
 			</div>
-			<img src="../images/dishes/5_specialties_shanzhen/bostonlobster_l.jpg" alt="Pan-fried morel mushroom stuffed with cuttlefish paste" />
+			<img src="../images/dishes/5_specialties_shanzhen/bostonlobster_l.jpg" alt="Stir-fried lobster with home made spicy sauce" />
 		</li><!--list_item-->
         
         <li class="list_item">
