--- a/english/specialties_luxury.html
+++ b/english/specialties_luxury.html
@@ -83,10 +83,10 @@
 
         <div class="grid_thumb">
 			<div class="heading">
-				<h1>Pan-fried morel mushroom stuffed with cuttlefish paste</h1>
+				<h1>Stir-fried lobster with home made spicy sauce</h1>
 				<p class="price seasonal">Seasonal</p>
 			</div>
-			<img src="../images/dishes/5_specialties_shanzhen/bostonlobster_s.jpg" alt="Pan-fried morel mushroom stuffed with cuttlefish paste" />
+			<img src="../images/dishes/5_specialties_shanzhen/bostonlobster_s.jpg" alt="Stir-fried lobster with home made spicy sauce" />
 		</div><!--grid_thumb-->
 
 
