home style / old time revision 2

--- a/chinese/oldfashion.html
+++ b/chinese/oldfashion.html
@@ -41,9 +41,9 @@
     	
         <a href="oldfashion_list.html">
         <div class="grid_thumb">
-			<div class="heading">
+			<!--<div class="heading">
 				<h1>懷舊小菜篇</h1>
-			</div>
+			</div>-->
 			<img src="../images/dishes/old_fashion/YD2014_254x174Achi-01.jpg" alt="" />
 		</div><!--grid_thumb-->
         </a>
@@ -51,9 +51,9 @@
 
         <a href="homestyle_list.html">
         <div class="grid_thumb">
-			<div class="heading">
+			<!--<div class="heading">
 				<h1>家常小菜篇</h1>
-			</div>
+			</div>-->
 			<img src="../images/dishes/old_fashion/YD2014_254x174Bchi-01.jpg" alt="" />
 		</div><!--grid_thumb-->
         </a>
