--- a/english/beverage_list.html
+++ b/english/beverage_list.html
@@ -34,7 +34,7 @@
             <li><a href="noodles_rices.html">Noodles &amp; rice</a></li>
 			<li><a href="desserts_list.html">Desserts</a></li>
             <li><a class="active" href="beverage_list.html">Beverage</a></li>
-            <li><a href="oldfashion.html">Old Time Favourites &#9733;</a></li>
+            <li><a href="oldfashion.html">Seasonal Specialties &#9733;</a></li>
 		</ul>
 	</div><!--sidebar-->
 	<div id="listview" class="menu_body" >
