--- a/english/oldfashion.html
+++ b/english/oldfashion.html
@@ -33,16 +33,16 @@
             <li><a href="noodles_rices.html">Noodles &amp; rice</a></li>
 			<li><a href="desserts_list.html">Desserts</a></li>
             <li><a href="beverage_list.html">Beverage</a></li>
-			<li><a class="active" href="oldfashion.html">Old Time Favourites &#9733;</a></li>
+			<li><a class="active" href="oldfashion.html">Seasonal Specialties &#9733;</a></li>
 		</ul>
 	</div><!--sidebar-->
 	<div id="gridview" class="menu_body">
     	
         <a href="oldfashion_list.html">
         <div class="grid_thumb">
-			<div class="heading">
+			<!--<div class="heading">
 				<h1>Old Time Specialties</h1>
-			</div>
+			</div>-->
 			<img src="../images/dishes/old_fashion/YD2014_254x174Aeng-01.jpg" alt="" />
 		</div><!--grid_thumb-->
         </a>
@@ -50,9 +50,9 @@
 
         <a href="homestyle_list.html">
         <div class="grid_thumb">
-			<div class="heading">
+			<!--<div class="heading">
 				<h1>Home Style Specialties</h1>
-			</div>
+			</div>-->
 			<img src="../images/dishes/old_fashion/YD2014_254x174Beng-01.jpg" alt="" />
 		</div><!--grid_thumb-->
         </a>
