--- a/english/drinks_desserts.html
+++ b/english/drinks_desserts.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <meta name="apple-mobile-web-app-capable" content="yes" />
 
-<title>Chef Tony Menu - Home Style Specialties - Grid View</title>
+<title>Chef Tony Menu - Beverage & Desserts - Grid View</title>
 <link rel="stylesheet" type="text/css" href="../css/reset.css">
 <link rel="stylesheet" type="text/css" href="../css/main.css">
 <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300' rel='stylesheet' type='text/css'>
@@ -17,7 +17,7 @@
 <div id="header"><!--
 	<span class="helper"></span>-->
     <a href="../index.html"><img src="../images/logo.png" alt="Chef Tony Menu" /></a>
-	<a href="../chinese/oldfashion.html" class="lang">中文</a> </div><!--header-->
+	<a href="../chinese/drinks_desserts.html" class="lang">中文</a> </div><!--header-->
 
 <div id="wrapper" class="clearfix is_english">
 	<div id="sidebar">
@@ -30,34 +30,35 @@
 			<li><a href="specialties_luxury.html">Yi Dong Specialties</a></li>
 			<li><a href="specialties_heart.html">Home style favourites</a></li>
 			<li><a href="hotpot_list.html">Casseroles</a></li>
-<li><a class="active" href="oldfashion.html">Seasonal Specialties</a></li>
+<li><a href="oldfashion.html">Seasonal Specialties</a></li>
             <li><a href="noodles_rices.html">Noodles &amp; rice</a></li>
-			<li><a href="drinks_desserts.html">Desserts / Beverages</a></li>
+			<li><a class="active" href="drinks_desserts.html">Desserts / Beverages</a></li>
 <!--<li><a href="desserts_list.html">Desserts</a></li>
             <li><a href="beverage_list.html">Beverage</a></li>
 			<li><a class="active" href="oldfashion.html">Seasonal Specialties &#9733;</a></li>-->
 		</ul>
 	</div><!--sidebar-->
 	<div id="gridview" class="menu_body">
+
+        <a href="desserts_list.html">
+        <div class="grid_thumb">
+			<div class="heading">
+				<h1>Desserts</h1>
+			</div>
+			<img src="../images/dishes/9_dessert/almondbirdsnest_s.jpg" alt="" />
+		</div><!--grid_thumb-->
+        </a>
     	
-        <a href="oldfashion_list.html">
+        <a href="beverage_list.html">
         <div class="grid_thumb">
-			<!--<div class="heading">
-				<h1>Old Time Specialties</h1>
-			</div>-->
-			<img src="../images/dishes/old_fashion/YD2014_254x174Aeng-01.jpg" alt="" />
+			<div class="heading">
+				<h1>Beverages</h1>
+			</div>
+			<img src="../images/dishes/beverages_s.jpg" alt="" />
 		</div><!--grid_thumb-->
         </a>
 
 
-        <a href="homestyle_list.html">
-        <div class="grid_thumb">
-			<!--<div class="heading">
-				<h1>Home Style Specialties</h1>
-			</div>-->
-			<img src="../images/dishes/old_fashion/YD2014_254x174Beng-01.jpg" alt="" />
-		</div><!--grid_thumb-->
-        </a>
 
 	</div><!-- menu_body-->
 </div><!--wrapper-->
