--- a/chinese/desserts_list.html
+++ b/chinese/desserts_list.html
@@ -17,7 +17,7 @@
 <div id="header"><!--
 	<span class="helper"></span>-->
     <a href="../index.html"><img src="../images/logo.png" alt="Chef Tony Menu" /></a>
-    <!--<a id="back" href="abalone_sharkfin.html">返回</a>-->
+    <a id="back" href="drinks_desserts.html">返回</a>
 	<a href="../english/desserts_list.html?id=1" class="lang">English</a> </div><!--header-->
 
 <div id="wrapper" class="clearfix">
@@ -31,10 +31,12 @@
 			<li><a href="specialties_luxury.html">山珍小菜</a></li>
 			<li><a href="specialties_heart.html">心意小炒</a></li>
 			<li><a href="hotpot_list.html">煲仔</a></li>
+<li><a href="oldfashion.html" >懷舊 / 家常小菜</a></li>
 			<li><a href="noodles_rices.html">粉麵飯</a></li>
-			<li><a class="active" href="desserts_list.html">甜品</a></li>
+            <li><a class="active" href="drinks_desserts.html">甜品 / 飲料</a></li>
+			<!--<li><a class="active" href="desserts_list.html">甜品</a></li>
 			<li><a href="beverage_list.html">飲料</a></li>
-<li><a href="oldfashion.html" >懷舊 / 家常小菜 &#9733;</a></li>
+<li><a href="oldfashion.html" >懷舊 / 家常小菜 &#9733;</a></li>-->
 		</ul>
 	</div><!--sidebar-->
 	<div id="listview" class="menu_body">
