--- a/chinese/specialties_heart.html
+++ b/chinese/specialties_heart.html
@@ -31,10 +31,10 @@
 			<li><a href="specialties_luxury.html">山珍小菜</a></li>
 			<li><a class="active" href="specialties_heart.html">心意小炒</a></li>
 			<li><a href="hotpot_list.html">煲仔</a></li>
+<li><a href="oldfashion.html" >懷舊 / 家常小菜</a></li>
 			<li><a href="noodles_rices.html">粉麵飯</a></li>
-			<li><a href="desserts_list.html">甜品</a></li>
-			<li><a href="beverage_list.html">飲料</a></li>
-<li><a href="oldfashion.html" >懷舊 / 家常小菜 &#9733;</a></li>
+			<li><a href="drinks_desserts.html">甜品 / 飲料</a></li>
+<!--<li><a href="oldfashion.html" >懷舊 / 家常小菜 &#9733;</a></li>-->
 		</ul>
 	</div><!--sidebar-->
 	<div id="gridview" class="menu_body">
