--- a/english/desserts_list.html
+++ b/english/desserts_list.html
@@ -17,7 +17,7 @@
 <div id="header"><!--
 	<span class="helper"></span>-->
     <a href="../index.html"><img src="../images/logo.png" alt="Chef Tony Menu" /></a>
-    <!--<a id="back" href="abalone_sharkfin_list.html">Back</a>-->
+    <a id="back" href="drinks_desserts.html">Back</a>
 	<a href="../chinese/desserts_list.html?id=1" class="lang">中文</a> </div><!--header-->
 
 <div id="wrapper" class="clearfix is_english">
@@ -31,10 +31,12 @@
 			<li><a href="specialties_luxury.html">Yi Dong Specialties</a></li>
 			<li><a href="specialties_heart.html">Home style favourites</a></li>
 			<li><a href="hotpot_list.html">Casseroles</a></li>
+<li><a href="oldfashion.html">Seasonal Specialties</a></li>
             <li><a href="noodles_rices.html">Noodles &amp; rice</a></li>
-			<li><a class="active" href="desserts_list.html">Desserts</a></li>
+            <li><a class="active" href="drinks_desserts.html">Desserts / Beverages</a></li>
+			<!--<li><a class="active" href="desserts_list.html">Desserts</a></li>
 			<li><a href="beverage_list.html">Beverage</a></li>
-<li><a href="oldfashion.html">Seasonal Specialties &#9733;</a></li>
+<li><a href="oldfashion.html">Seasonal Specialties &#9733;</a></li>-->
 		</ul>
 	</div><!--sidebar-->
 	<div id="listview" class="menu_body">
