--- a/english/specialties_heart.html
+++ b/english/specialties_heart.html
@@ -30,10 +30,12 @@
 			<li><a href="specialties_luxury.html">Yi Dong Specialties</a></li>
 			<li><a class="active" href="specialties_heart.html">Home style favourites</a></li>
 			<li><a href="hotpot_list.html">Casseroles</a></li>
+<li><a href="oldfashion.html">Seasonal Specialties</a></li>
             <li><a href="noodles_rices.html">Noodles &amp; rice</a></li>
-			<li><a href="desserts_list.html">Desserts</a></li>
+			<li><a href="drinks_desserts.html">Desserts / Beverages</a></li>
+<!--<li><a href="desserts_list.html">Desserts</a></li>
 			<li><a href="beverage_list.html">Beverage</a></li>
-<li><a href="oldfashion.html">Seasonal Specialties &#9733;</a></li>
+<li><a href="oldfashion.html">Seasonal Specialties &#9733;</a></li>-->
 		</ul>
 	</div><!--sidebar-->
 	<div id="gridview" class="menu_body">
