Extra Charge for VIP Room Exclusively Tea Set added

--- a/chinese/beverage_list.html
+++ b/chinese/beverage_list.html
@@ -10,6 +10,17 @@
 <link rel="stylesheet" type="text/css" href="../css/main.css">
 <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300' rel='stylesheet' type='text/css'>
 
+<style>
+.is_tea.tags{
+	display:block
+}
+.is_tea.tags p{
+	color: #431700; 
+	border-color: #431700; 
+	width:155px;
+}
+</style>
+
 </head>
 
 <body>
@@ -53,7 +64,8 @@
             <div class="heading">
 				<h1>十年陳皮普洱(位)</h1>
                 <p class="desc"></p>
-                <div class="tags">
+                <div class="is_tea tags">
+                	<p>貴賓房專用茶具收費</p>
                 </div>
 				<p class="price">$5<sup>.00</sup></p>
 			</div>
@@ -61,7 +73,8 @@
             <div class="heading">
 				<h1>洞庭湖碧螺春(位)</h1>
                 <p class="desc"></p>
-                <div class="tags">
+                <div class="is_tea tags">
+                	<p>貴賓房專用茶具收費</p>
                 </div>
 				<p class="price">$4<sup>.00</sup></p>
 			</div>
@@ -69,7 +82,8 @@
             <div class="heading">
 				<h1>頂級白牡丹(位)</h1>
                 <p class="desc"></p>
-                <div class="tags">
+                <div class="is_tea tags">
+                	<p>貴賓房專用茶具收費</p>
                 </div>
 				<p class="price">$4<sup>.00</sup></p>
 			</div>
@@ -77,7 +91,8 @@
             <div class="heading">
 				<h1>胎菊王(位)</h1>
                 <p class="desc"></p>
-                <div class="tags">
+                <div class="is_tea tags">
+                	<p>貴賓房專用茶具收費</p>
                 </div>
 				<p class="price">$3<sup>.00</sup></p>
 			</div>
@@ -85,7 +100,8 @@
             <div class="heading">
 				<h1>武夷山大紅袍(位)</h1>
                 <p class="desc"></p>
-                <div class="tags">
+                <div class="is_tea tags">
+                	<p>貴賓房專用茶具收費</p>
                 </div>
 				<p class="price">$3<sup>.00</sup></p>
 			</div>
@@ -98,14 +114,16 @@
             <div class="heading">
 				<h1>頂級茉莉花(位)</h1>
                 <p class="desc"></p>
-                <div class="tags">
+                <div class="is_tea tags">
+                	<p>貴賓房專用茶具收費</p>
                 </div>
 				<p class="price">$3<sup>.00</sup></p>
 			</div>
             <div class="heading">
 				<h1>古樹生普洱(位)</h1>
                 <p class="desc"></p>
-                <div class="tags">
+                <div class="is_tea tags">
+                	<p>貴賓房專用茶具收費</p>
                 </div>
 				<p class="price">$3<sup>.00</sup></p>
 			</div>
@@ -113,7 +131,8 @@
             <div class="heading">
 				<h1>極品鐵觀音(位)</h1>
                 <p class="desc"></p>
-                <div class="tags">
+                <div class="is_tea tags">
+                	<p>貴賓房專用茶具收費</p>
                 </div>
 				<p class="price">$3<sup>.50</sup></p>
 			</div>
@@ -121,7 +140,8 @@
             <div class="heading">
 				<h1>獅峰龍井(位)</h1>
                 <p class="desc"></p>
-                <div class="tags">
+                <div class="is_tea tags">
+                	<p>貴賓房專用茶具收費</p>
                 </div>
 				<p class="price">$3<sup>.50</sup></p>
 			</div>
@@ -129,7 +149,8 @@
             <div class="heading">
 				<h1>胎菊枸杞王(位)</h1>
                 <p class="desc"></p>
-                <div class="tags">
+                <div class="is_tea tags">
+                	<p>貴賓房專用茶具收費</p>
                 </div>
 				<p class="price">$3<sup>.50</sup></p>
 			</div>
