--- a/english/beverage_list.html
+++ b/english/beverage_list.html
@@ -9,7 +9,16 @@
 <link rel="stylesheet" type="text/css" href="../css/reset.css">
 <link rel="stylesheet" type="text/css" href="../css/main.css">
 <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300' rel='stylesheet' type='text/css'>
-
+<style>
+.is_tea.tags{
+	display:block
+}
+.is_tea.tags p{
+	color: #431700; 
+	border-color: #431700; 
+	width:330px;
+}
+</style>
 </head>
 
 <body>
@@ -53,7 +62,8 @@
             <div class="heading">
 				<h1>Premium Citrus Peel Pu-Erh (per person)</h1>
                 <p class="desc"></p>
-                <div class="tags">
+                <div class="is_tea tags">
+                	<p>Extra Charge for VIP Room Exclusively Tea Set</p>
                 </div>
 				<p class="price">$5<sup>.00</sup></p>
 			</div>
@@ -61,7 +71,8 @@
             <div class="heading">
 				<h1>Dongting Biluochun (per person)</h1>
                 <p class="desc"></p>
-                <div class="tags">
+                <div class="is_tea tags">
+                	<p>Extra Charge for VIP Room Exclusively Tea Set</p>
                 </div>
 				<p class="price">$4<sup>.00</sup></p>
 			</div>
@@ -69,7 +80,8 @@
             <div class="heading">
 				<h1>Premium White Peony Tea (per person)</h1>
                 <p class="desc"></p>
-                <div class="tags">
+                <div class="is_tea tags">
+                	<p>Extra Charge for VIP Room Exclusively Tea Set</p>
                 </div>
 				<p class="price">$4<sup>.00</sup></p>
 			</div>
@@ -77,7 +89,8 @@
             <div class="heading">
 				<h1>Fetal Chrysanthemum Bud Tea (per person)</h1>
                 <p class="desc"></p>
-                <div class="tags">
+                <div class="is_tea tags">
+                	<p>Extra Charge for VIP Room Exclusively Tea Set</p>
                 </div>
 				<p class="price">$3<sup>.00</sup></p>
 			</div>
@@ -85,7 +98,8 @@
             <div class="heading">
 				<h1>Big Red Tea (per person)</h1>
                 <p class="desc"></p>
-                <div class="tags">
+                <div class="is_tea tags">
+                	<p>Extra Charge for VIP Room Exclusively Tea Set</p>
                 </div>
 				<p class="price">$3<sup>.00</sup></p>
 			</div>
@@ -98,14 +112,16 @@
             <div class="heading">
 				<h1>Premium Jasmine (per person)</h1>
                 <p class="desc"></p>
-                <div class="tags">
+                <div class="is_tea tags">
+                	<p>Extra Charge for VIP Room Exclusively Tea Set</p>
                 </div>
 				<p class="price">$3<sup>.00</sup></p>
 			</div>
             <div class="heading">
 				<h1>Special Pu-Erh (per person)</h1>
                 <p class="desc"></p>
-                <div class="tags">
+                <div class="is_tea tags">
+                	<p>Extra Charge for VIP Room Exclusively Tea Set</p>
                 </div>
 				<p class="price">$3<sup>.00</sup></p>
 			</div>
@@ -113,7 +129,8 @@
             <div class="heading">
 				<h1>Premium Iron Buddha (per person)</h1>
                 <p class="desc"></p>
-                <div class="tags">
+                <div class="is_tea tags">
+                	<p>Extra Charge for VIP Room Exclusively Tea Set</p>
                 </div>
 				<p class="price">$3<sup>.50</sup></p>
 			</div>
@@ -121,7 +138,8 @@
             <div class="heading">
 				<h1>Dragonwell Tea (per person)</h1>
                 <p class="desc"></p>
-                <div class="tags">
+                <div class="is_tea tags">
+                	<p>Extra Charge for VIP Room Exclusively Tea Set</p>
                 </div>
 				<p class="price">$3<sup>.50</sup></p>
 			</div>
@@ -129,7 +147,8 @@
             <div class="heading">
 				<h1>Premium Fetal Chrysanthemum Bud Tea (per person)</h1>
                 <p class="desc"></p>
-                <div class="tags">
+                <div class="is_tea tags">
+                	<p>Extra Charge for VIP Room Exclusively Tea Set</p>
                 </div>
 				<p class="price">$3<sup>.50</sup></p>
 			</div>
